--- a/doc/info/Ctensor.texi
+++ b/doc/info/Ctensor.texi
@@ -119,8 +119,11 @@ y;
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Tensors  @subentry  Introduction to ctensor
 @category{Tensors}
+@ctindex  Share packages  @subentry  Introduction to ctensor
 @category{Share packages}
+@ctindex  Package ctensor  @subentry  Introduction to ctensor
 @category{Package ctensor}
 @closecatbox
 
@@ -137,6 +140,7 @@ which initializes the package and allows the user to enter a metric
 interactively. See @code{ctensor} for more details.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  csetup
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -163,6 +167,7 @@ defined. From these, the frame matrix @code{fr} and the inverse frame
 metric @code{ufg} are computed.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  cmetric
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -307,6 +312,7 @@ The optional argument @var{extra_arg} can be any one of the following:
 If the global variable @code{verbose} is set to @code{true}, @code{ct_coordsys} displays the values of @code{dim}, @code{ct_coords}, and either @code{lg} or @code{lfg} and @code{fri}, depending on the value of @code{cframe_flag}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ct_coordsys
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -317,6 +323,7 @@ Initializes the @code{ctensor} package.
 The @code{init_ctensor} function reinitializes the @code{ctensor} package. It removes all arrays and matrices used by @code{ctensor}, resets all flags, resets @code{dim} to 4, and resets the frame metric to the Lorentz-frame.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  init_ctensor
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -377,6 +384,7 @@ will not occur. The array elements @code{mcs[i,j,k]} are defined in such a
 manner that the final index is contravariant.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  christof
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -388,6 +396,7 @@ components @code{ric[i,j]} of the Ricci tensor.  If the argument @var{dis} is @c
 then the non-zero components are displayed.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ricci
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -403,6 +412,7 @@ directly.  Otherwise, @code{ricci(false)} will simply compute the entries
 of the array @code{uric[i,j]} without displaying the results.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  uricci
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -412,6 +422,7 @@ Returns the scalar curvature (obtained by contracting
 the Ricci tensor) of the Riemannian manifold with the given metric.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  scurvature
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -428,6 +439,7 @@ these components. If @code{ratfac} is @code{true} then the components will
 also be factored.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  einstein
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -436,6 +448,7 @@ also be factored.
 Covariant Einstein-tensor. @code{leinstein} stores the values of the covariant Einstein tensor in the array @code{lein}. The covariant Einstein-tensor is computed from the mixed Einstein tensor @code{ein} by multiplying it with the metric tensor. If the argument @var{dis} is @code{true}, then the non-zero values of the covariant Einstein tensor are displayed.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  leinstein
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -469,6 +482,7 @@ computed directly from the Christoffel-symbols. If @code{cframe_flag} is
 frame field coefficients.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  riemann
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -486,6 +500,7 @@ the (3,1) Riemann tensor is computed first.
 For information on index ordering, see @code{riemann}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  lriemann
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -496,6 +511,7 @@ curvature tensor as array elements @code{uriem[i,j,k,l]}.  These are displayed
 if @var{dis} is @code{true}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  uriemann
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -511,6 +527,7 @@ lriem[i,j,k,l]*uriem[i,j,k,l].
 This object is not automatically simplified since it can be very large.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  rinvariant
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -524,6 +541,7 @@ rationally simplified; if @code{ratfac} is @code{true} then the results will be
 factored as well.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  weyl
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -685,6 +703,7 @@ This capability can be useful, for instance, when working in the weak
 field limit far from a gravitational source.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ctaylor
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -707,6 +726,7 @@ ifb   = ( ifri    - ifri    ) ifr   ifr
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  frame_bracket
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -744,6 +764,7 @@ np  = (fri  - %i fri ) / sqrt(2)
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  nptetrad
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -769,6 +790,7 @@ computed in a frame base, some in a coordinate base, with no means to
 distinguish between the two.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  psi
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -855,6 +877,7 @@ Except for some simple test cases, the implementation is untested as of
 December 19, 2004, and is likely to contain errors.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  petrov
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -917,6 +940,7 @@ If necessary, @code{christof} calls the functions @code{contortion} and
 Computes the (2,1) contortion coefficients from the torsion tensor @var{tr}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  contortion
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -927,6 +951,7 @@ Computes the (2,1) nonmetricity coefficients from the nonmetricity
 vector @var{nm}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  nonmetricity
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -943,6 +968,7 @@ functions which define the transformation.  (Formerly called @code{transform}.)
 These may also be supplied in the form of a list as an optional second argument.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ctransform
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1010,6 +1036,7 @@ below, @code{findde} gives the following independent differential equations:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  findde
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1020,6 +1047,7 @@ user to choose the corresponding vector name as the example under
 @code{contragrad} illustrates.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  cograd
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1065,6 +1093,7 @@ below for the Schwarzschild metric illustrates:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  contragrad
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1101,6 +1130,7 @@ dependencies have been declared upon the function. For example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  dscalar
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1115,6 +1145,7 @@ divergence of the Einstein tensor will be formed and must be zero.
 In addition, the divergence (vector) is given the array name @code{div}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  checkdiv
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1126,6 +1157,7 @@ motion for a given metric.  They are stored in the array @code{geod[i]}.  If
 the argument @var{dis} is @code{true} then these equations are displayed.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  cgeodesic
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1142,6 +1174,7 @@ The components of the second rank covariant field tensor are
 represented by the array @code{bd}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  bdvac
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1153,6 +1186,7 @@ invariant density of R^2. The field equations are the components of an
 array named @code{inv1}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  invariant1
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1167,6 +1201,7 @@ components of an array named @code{inv2}.
 
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  invariant2
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1179,6 +1214,7 @@ generates the field equations of Rosen's bimetric theory. The field
 equations are the components of an array named @code{rosen}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  bimetric
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1191,7 +1227,9 @@ Returns @code{true} if the first @var{n} rows and @var{n} columns of @var{M}
 form a diagonal matrix or (2D) array.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  diagmatrixp
 @category{Package ctensor}
+@ctindex  Predicate functions  @subentry  diagmatrixp
 @category{Predicate functions}
 @closecatbox
 
@@ -1207,7 +1245,9 @@ If @var{n} is less than the size of @var{M},
 comprising rows 1 through @var{n} and columns 1 through @var{n}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  symmetricp
 @category{Package ctensor}
+@ctindex  Predicate functions  @subentry  symmetricp
 @category{Predicate functions}
 @closecatbox
 
@@ -1221,6 +1261,7 @@ elements.  In this way, it is possible to quickly find the non-zero
 expressions and attempt simplification.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ntermst
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1443,6 +1484,7 @@ riem     = [        0         - -------------         0         0 ]
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  cdisplay
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1452,6 +1494,7 @@ Returns a new list consisting of @var{L} with the @var{n}'th element
 deleted.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  deleten
 @category{Package ctensor}
 @closecatbox
 @end deffn
@@ -1469,6 +1512,7 @@ default 4. The command @code{dim: n} will reset the dimension to any other
 value @code{n}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  dim
 @category{Package ctensor}
 @closecatbox
 
@@ -1486,6 +1530,7 @@ run times will, of course, result. Note: this option is set
 automatically by @code{csetup} if a diagonal metric is specified.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  diagmetric
 @category{Package ctensor}
 @closecatbox
 
@@ -1498,7 +1543,9 @@ Causes trigonometric simplifications to be used when tensors are computed. Prese
 @code{ctrgsimp} affects only computations involving a moving frame.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ctrgsimp
 @category{Package ctensor}
+@ctindex  Simplification flags and variables  @subentry  ctrgsimp
 @category{Simplification flags and variables}
 @closecatbox
 
@@ -1515,6 +1562,7 @@ computations in a Lorentz frame, @code{lfg} should have the appropriate
 signature.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  cframe_flag
 @category{Package ctensor}
 @closecatbox
 
@@ -1528,6 +1576,7 @@ connection coefficients. The contortion tensor itself is computed by
 @code{contortion} from the user-supplied tensor @code{tr}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ctorsion_flag
 @category{Package ctensor}
 @closecatbox
 
@@ -1542,6 +1591,7 @@ from the user-supplied nonmetricity vector @code{nm} by the function
 @code{nonmetricity}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  cnonmet_flag
 @category{Package ctensor}
 @closecatbox
 
@@ -1556,6 +1606,7 @@ Taylor-series expansions. Presently, @code{christof}, @code{ricci},
 setting.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ctayswitch
 @category{Package ctensor}
 @closecatbox
 
@@ -1568,6 +1619,7 @@ Variable used for Taylor-series expansion if @code{ctayswitch} is set to
 @code{true}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ctayvar
 @category{Package ctensor}
 @closecatbox
 
@@ -1580,6 +1632,7 @@ Maximum power used in Taylor-series expansion when @code{ctayswitch} is
 set to @code{true}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ctaypov
 @category{Package ctensor}
 @closecatbox
 
@@ -1592,6 +1645,7 @@ Point around which Taylor-series expansion is carried out when
 @code{ctayswitch} is set to @code{true}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ctaypt
 @category{Package ctensor}
 @closecatbox
 
@@ -1604,6 +1658,7 @@ The determinant of the metric tensor @code{lg}. Computed by @code{cmetric} when
 @code{cframe_flag} is set to @code{false}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  gdet
 @category{Package ctensor}
 @closecatbox
 
@@ -1615,6 +1670,7 @@ The determinant of the metric tensor @code{lg}. Computed by @code{cmetric} when
 Causes rational simplification to be applied by @code{christof}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ratchristof
 @category{Package ctensor}
 @closecatbox
 
@@ -1629,6 +1685,7 @@ performed on the non-zero components of Einstein tensors; if
 @code{ratfac} is @code{true} then the components will also be factored.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  rateinstein
 @category{Package ctensor}
 @closecatbox
 
@@ -1643,6 +1700,7 @@ simplification will be done; if @code{ratfac} is @code{true} then each of the
 components will also be factored.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ratriemann
 @category{Package ctensor}
 @closecatbox
 
@@ -1657,6 +1715,7 @@ to apply rational simplification to the values of the Weyl tensor. If
 @code{ratfac} is @code{true}, then the components will also be factored.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ratweyl
 @category{Package ctensor}
 @closecatbox
 
@@ -1667,6 +1726,7 @@ to apply rational simplification to the values of the Weyl tensor. If
 The covariant frame metric. By default, it is initialized to the 4-dimensional Lorentz frame with signature (+,+,+,-). Used when @code{cframe_flag} is @code{true}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  lfg
 @category{Package ctensor}
 @closecatbox
 
@@ -1677,6 +1737,7 @@ The covariant frame metric. By default, it is initialized to the 4-dimensional L
 The inverse frame metric. Computed from @code{lfg} when @code{cmetric} is called while @code{cframe_flag} is set to @code{true}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ufg
 @category{Package ctensor}
 @closecatbox
 
@@ -1689,6 +1750,7 @@ The (3,1) Riemann tensor. Computed when the function @code{riemann} is invoked. 
 If @code{cframe_flag} is @code{true}, @code{riem} is computed from the covariant Riemann-tensor @code{lriem}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  riem
 @category{Package ctensor}
 @closecatbox
 
@@ -1700,6 +1762,7 @@ If @code{cframe_flag} is @code{true}, @code{riem} is computed from the covariant
 The covariant Riemann tensor. Computed by @code{lriemann}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  lriem
 @category{Package ctensor}
 @closecatbox
 
@@ -1711,6 +1774,7 @@ The covariant Riemann tensor. Computed by @code{lriemann}.
 The contravariant Riemann tensor. Computed by @code{uriemann}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  uriem
 @category{Package ctensor}
 @closecatbox
 
@@ -1722,6 +1786,7 @@ The contravariant Riemann tensor. Computed by @code{uriemann}.
 The covariant Ricci-tensor. Computed by @code{ricci}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ric
 @category{Package ctensor}
 @closecatbox
 
@@ -1733,6 +1798,7 @@ The covariant Ricci-tensor. Computed by @code{ricci}.
 The mixed-index Ricci-tensor. Computed by @code{uricci}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  uric
 @category{Package ctensor}
 @closecatbox
 
@@ -1745,6 +1811,7 @@ The metric tensor. This tensor must be specified (as a @code{dim} by @code{dim} 
 before other computations can be performed.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  lg
 @category{Package ctensor}
 @closecatbox
 
@@ -1756,6 +1823,7 @@ before other computations can be performed.
 The inverse of the metric tensor. Computed by @code{cmetric}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ug
 @category{Package ctensor}
 @closecatbox
 
@@ -1767,6 +1835,7 @@ The inverse of the metric tensor. Computed by @code{cmetric}.
 The Weyl tensor. Computed by @code{weyl}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  weyl
 @category{Package ctensor}
 @closecatbox
 
@@ -1778,6 +1847,7 @@ The Weyl tensor. Computed by @code{weyl}.
 Frame bracket coefficients, as computed by @code{frame_bracket}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  fb
 @category{Package ctensor}
 @closecatbox
 
@@ -1789,6 +1859,7 @@ Frame bracket coefficients, as computed by @code{frame_bracket}.
 The Kretschmann invariant. Computed by @code{rinvariant}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  kinvariant
 @category{Package ctensor}
 @closecatbox
 
@@ -1800,6 +1871,7 @@ The Kretschmann invariant. Computed by @code{rinvariant}.
 A Newman-Penrose null tetrad. Computed by @code{nptetrad}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  np
 @category{Package ctensor}
 @closecatbox
 
@@ -1823,6 +1895,7 @@ Defined as @code{ug.np}. The product @code{np.transpose(npi)} is constant:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  npi
 @category{Package ctensor}
 @closecatbox
 
@@ -1834,6 +1907,7 @@ Defined as @code{ug.np}. The product @code{np.transpose(npi)} is constant:
 User-supplied rank-3 tensor representing torsion. Used by @code{contortion}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  tr
 @category{Package ctensor}
 @closecatbox
 @end defvr
@@ -1844,6 +1918,7 @@ User-supplied rank-3 tensor representing torsion. Used by @code{contortion}.
 The contortion tensor, computed from @code{tr} by @code{contortion}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  kt
 @category{Package ctensor}
 @closecatbox
 @end defvr
@@ -1854,6 +1929,7 @@ The contortion tensor, computed from @code{tr} by @code{contortion}.
 User-supplied nonmetricity vector. Used by @code{nonmetricity}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  nm
 @category{Package ctensor}
 @closecatbox
 @end defvr
@@ -1864,6 +1940,7 @@ User-supplied nonmetricity vector. Used by @code{nonmetricity}.
 The nonmetricity coefficients, computed from @code{nm} by @code{nonmetricity}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  nmc
 @category{Package ctensor}
 @closecatbox
 
@@ -1876,6 +1953,7 @@ Variable indicating if the tensor package has been initialized. Set and used by
 @code{csetup}, reset by @code{init_ctensor}.
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  tensorkill
 @category{Package ctensor}
 @closecatbox
 
@@ -1893,6 +1971,7 @@ one may redefine the coordinates with the assignment
 See also @mrefdot{csetup}
 
 @opencatbox{Categories:}
+@ctindex  Package ctensor  @subentry  ct_coords
 @category{Package ctensor}
 @closecatbox
 
