--- a/doc/info/Groups.texi
+++ b/doc/info/Groups.texi
@@ -64,6 +64,7 @@ Rows tried 71
 (%o6)                          20
 @end example
 @opencatbox{Categories:}
+@ctindex  Group theory  @subentry  todd_coxeter
 @category{Group theory}
 @closecatbox
 @end deffn
