--- a/doc/info/Integration.texi
+++ b/doc/info/Integration.texi
@@ -113,6 +113,7 @@ higher degree function.  E.g.,
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  changevar
 @category{Integral calculus}
 @closecatbox
 @end deffn
@@ -176,6 +177,7 @@ example problem.
 @c @code{demo (dblint_1)} executes another demonstration.
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  dblint
 @category{Integral calculus}
 @closecatbox
 @end deffn
@@ -196,6 +198,7 @@ noun form of the integral.  See @mref{quad_qag} and related functions for
 numerical approximation of definite integrals.
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  defint
 @category{Integral calculus}
 @closecatbox
 @end deffn
@@ -210,6 +213,7 @@ When @code{erfflag} is @code{false}, prevents @code{risch} from introducing the
 begin with.
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  erfflag
 @category{Integral calculus}
 @closecatbox
 @end defvr
@@ -284,6 +288,7 @@ pos;
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Laplace transform  @subentry  ilt
 @category{Laplace transform}
 @closecatbox
 @end deffn
@@ -337,6 +342,7 @@ The number 1 isn't in the domain of atanh
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  intanalysis
 @category{Integral calculus}
 @closecatbox
 @end defvr
@@ -593,6 +599,7 @@ body of @code{f_2}.
 @end itemize
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  integrate
 @category{Integral calculus}
 @closecatbox
 @end deffn
@@ -637,6 +644,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  integration_constant
 @category{Integral calculus}
 @closecatbox
 @end defvr
@@ -698,6 +706,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  integration_constant_counter
 @category{Integral calculus}
 @closecatbox
 @end defvr
@@ -770,6 +779,7 @@ if the denominator is a cubic polynomial.
 Sometimes this will help Maxima obtain a more useful result.
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  integrate_use_rootsof
 @category{Integral calculus}
 @closecatbox
 @end defvr
@@ -794,6 +804,7 @@ while @code{integrate} may employ various heuristics and may recognize some
 special cases.
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  ldefint
 @category{Integral calculus}
 @closecatbox
 @end deffn
@@ -831,6 +842,7 @@ Two examples where @code{ilt} fails:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Laplace transform  @subentry  pwilt
 @category{Laplace transform}
 @closecatbox
 @end deffn
@@ -882,7 +894,9 @@ variable @var{z} assumes the value @var{z_0}.  The residue is the coefficient of
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  residue
 @category{Integral calculus}
+@ctindex  Complex variables  @subentry  residue
 @category{Complex variables}
 @closecatbox
 @end deffn
@@ -923,6 +937,7 @@ with.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  risch
 @category{Integral calculus}
 @closecatbox
 @end deffn
@@ -936,6 +951,7 @@ with.
 Equivalent to @code{ldefint} with @code{tlimswitch} set to @code{true}.
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  tldefint
 @category{Integral calculus}
 @closecatbox
 @end deffn
@@ -1054,9 +1070,13 @@ for the integrator to produce a good solution.
 
 
 @opencatbox{Categories:}
+@ctindex  Integral calculus  @subentry  Introduction to QUADPACK
 @category{Integral calculus}
+@ctindex  Numerical methods  @subentry  Introduction to QUADPACK
 @category{Numerical methods}
+@ctindex  Share packages  @subentry  Introduction to QUADPACK
 @category{Share packages}
+@ctindex  Package quadpack  @subentry  Introduction to QUADPACK
 @category{Package quadpack}
 @closecatbox
 
@@ -1167,7 +1187,9 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  quad_qag
 @category{Numerical methods}
+@ctindex  Package quadpack  @subentry  quad_qag
 @category{Package quadpack}
 @closecatbox
 @end deffn
@@ -1263,7 +1285,9 @@ Examples:
 Note that @code{quad_qags} is more accurate and efficient than @code{quad_qag} for this integrand.
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  quad_qags
 @category{Numerical methods}
+@ctindex  Package quadpack  @subentry  quad_qags
 @category{Package quadpack}
 @closecatbox
 @end deffn
@@ -1382,7 +1406,9 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  quad_qagi
 @category{Numerical methods}
+@ctindex  Package quadpack  @subentry  quad_qagi
 @category{Package quadpack}
 @closecatbox
 @end deffn
@@ -1500,7 +1526,9 @@ Principal Value
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  quad_qawc
 @category{Numerical methods}
+@ctindex  Package quadpack  @subentry  quad_qawc
 @category{Package quadpack}
 @closecatbox
 @end deffn
@@ -1613,7 +1641,9 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  quad_qawf
 @category{Numerical methods}
+@ctindex  Package quadpack  @subentry  quad_qawf
 @category{Package quadpack}
 @closecatbox
 @end deffn
@@ -1762,7 +1792,9 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  quad_qawo
 @category{Numerical methods}
+@ctindex  Package quadpack  @subentry  quad_qawo
 @category{Package quadpack}
 @closecatbox
 @end deffn
@@ -1901,7 +1933,9 @@ pos;
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  quad_qaws
 @category{Numerical methods}
+@ctindex  Package quadpack  @subentry  quad_qaws
 @category{Package quadpack}
 @closecatbox
 @end deffn
@@ -2007,7 +2041,9 @@ these points to @code{quad_qagp}.  We also note that @code{quad_qagp} is
 more accurate and more efficient that @mrefdot{quad_qags}
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  quad_qagp
 @category{Numerical methods}
+@ctindex  Package quadpack  @subentry  quad_qagp
 @category{Package quadpack}
 @closecatbox
 @end deffn
@@ -2034,7 +2070,9 @@ If @var{value} is not given, then the current value of the
 @var{parameter} is set to the given value.
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  quad_control
 @category{Numerical methods}
+@ctindex  Package quadpack  @subentry  quad_control
 @category{Package quadpack}
 @closecatbox
 @end deffn
