--- a/doc/info/Introduction.texi
+++ b/doc/info/Introduction.texi
@@ -190,6 +190,7 @@ Maxima can generate plots of one or more functions:
 @c You can rotate a 3D plot.
 
 @opencatbox{Categories:}
+@ctindex  Help  @subentry  
 @category{Help}
 @closecatbox
 
