--- a/doc/info/Number.texi
+++ b/doc/info/Number.texi
@@ -33,6 +33,7 @@ See also @mrefdot{burn}
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bern
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -45,6 +46,7 @@ Returns the @var{n}'th Bernoulli polynomial in the
 variable @var{x}.
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bernpoly
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -58,7 +60,9 @@ The return value is a big float (bfloat);
 @var{n} is the number of digits in the return value.
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bfzeta
 @category{Number theory}
+@ctindex  Numerical evaluation  @subentry  bfzeta
 @category{Numerical evaluation}
 @closecatbox
 @end deffn
@@ -91,7 +95,9 @@ $$\zeta \left(s,h\right) = \sum_{k=0}^\infty {1 \over \left(k+h\right)^{s}}$$
 @code{load ("bffac")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bfhzeta
 @category{Number theory}
+@ctindex  Numerical evaluation  @subentry  bfhzeta
 @category{Numerical evaluation}
 @closecatbox
 @end deffn
@@ -121,6 +127,7 @@ returning.  @code{burn} invokes the approximation for even integers @code{n >
 @code{load ("bffac")} loads this function.  See also @mrefdot{bern}
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  burn
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -151,6 +158,7 @@ positive and pairwise coprime integers.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  chinese
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -242,6 +250,7 @@ Maxima does not know about operations on continued fractions outside of
 @end itemize
 
 @opencatbox{Categories:}
+@ctindex  Continued fractions  @subentry  cf
 @category{Continued fractions}
 @closecatbox
 @end deffn
@@ -271,6 +280,7 @@ from the list representation of a continued fraction @code{[a, b, c, ...]}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Continued fractions  @subentry  cfdisrep
 @category{Continued fractions}
 @closecatbox
 @end deffn
@@ -296,6 +306,7 @@ next-to-last (column 2) convergents of the continued fraction @var{x}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Continued fractions  @subentry  cfexpand
 @category{Continued fractions}
 @closecatbox
 @end deffn
@@ -322,6 +333,7 @@ Thus the default is to give one period.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Continued fractions  @subentry  cflength
 @category{Continued fractions}
 @closecatbox
 @end defvr
@@ -349,6 +361,7 @@ raised to the @var{k}'th power.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  divsum
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -373,6 +386,7 @@ For the Euler-Mascheroni constant, see @code{%gamma}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  euler
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -390,6 +404,7 @@ computed prime factors. If @code{factors_only} is set to @code{true},
 Example: See @mrefdot{ifactors}
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  factors_only
 @category{Number theory}
 @closecatbox
 @end defvr
@@ -412,6 +427,7 @@ the Fibonacci number preceding the last one computed.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  fib
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -453,6 +469,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  fibtophi
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -488,6 +505,7 @@ prime factors.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  ifactors
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -519,6 +537,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  igcdex
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -536,6 +555,7 @@ Returns the integer @var{n}'th root of the absolute value of @var{x}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  inrt
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -558,6 +578,7 @@ if @var{n} is a zero divisor modulo @var{m}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  inv_mod
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -570,6 +591,7 @@ Returns the "integer square root" of the absolute value of @var{x}, which is an
 integer.
 
 @opencatbox{Categories:}
+@ctindex  Mathematical functions  @subentry  isqrt
 @category{Mathematical functions}
 @closecatbox
 @end deffn
@@ -587,6 +609,7 @@ Returns the Jacobi symbol of @var{p} and @var{q}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  jacobi
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -601,6 +624,7 @@ The arguments may be general expressions as well as integers.
 @code{load ("functs")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  lcm
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -634,6 +658,7 @@ how Fibonacci numbers can be computed via @code{lucas} and @code{next_lucas}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  lucas
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -678,6 +703,7 @@ simplification rules:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Mathematical functions  @subentry  mod
 @category{Mathematical functions}
 @closecatbox
 @end deffn
@@ -694,6 +720,7 @@ Returns the smallest prime bigger than @var{n}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  next_prime
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -752,6 +779,7 @@ If @var{n} is negative, @code{inv_mod} is used to find the modular inverse.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  power_mod
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -776,7 +804,9 @@ pass one Miller-Rabin test is less than 1/4.  Using the default value 25 for
 composite is much smaller that 10^-15.
 
 @opencatbox{Categories:}
+@ctindex  Predicate functions  @subentry  primep
 @category{Predicate functions}
+@ctindex  Number theory  @subentry  primep
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -789,6 +819,7 @@ Default value: 25
 Number of Miller-Rabin's tests used in @code{primep}.
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  primep_number_of_tests
 @category{Number theory}
 @closecatbox
 @end defvr
@@ -805,6 +836,7 @@ Returns the list of all primes from @var{start} to @var{end}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  primes
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -821,6 +853,7 @@ Returns the greatest prime smaller than @var{n}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  prev_prime
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -842,6 +875,7 @@ This amounts to solving Pell's equation @code{a^2 - @var{n} b^2 = 1}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  qunit
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -854,6 +888,7 @@ Returns the number of integers less than or equal to @var{n} which
 are relatively prime to @var{n}.
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  totient
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -867,6 +902,7 @@ and @code{euler} excludes the Euler numbers which are equal to zero.
 See @code{bern} and @code{euler}.
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zerobern
 @category{Number theory}
 @closecatbox
 @end defvr
@@ -912,6 +948,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zeta
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -946,6 +983,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zeta%pi
 @category{Number theory}
 @closecatbox
 @end defvr
@@ -959,6 +997,7 @@ Shows an addition table of all elements in (Z/@var{n}Z).
 See also @mrefcomma{zn_mult_table}  @mrefdot{zn_power_table}
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_add_table
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1045,6 +1084,7 @@ and each of these has @code{2^2} square roots.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_characteristic_factors
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1059,6 +1099,7 @@ the greatest characteristic factor of the totient of @var{n}.
 For remarks and examples see @mrefdot{zn_characteristic_factors}
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_carmichael_lambda
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1096,6 +1137,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_determinant
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1110,6 +1152,7 @@ characteristic factors of the totient of @var{n}.
 For remarks and examples see @mrefdot{zn_characteristic_factors}
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_factor_generators
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1145,6 +1188,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_invert_by_lu
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1225,6 +1269,7 @@ The running time primarily depends on the bitlength of the totient's greatest pr
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_log
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1339,6 +1384,7 @@ the top left corner, just like in table @code{T9}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_mult_table
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1462,6 +1508,7 @@ and passed as the fourth argument.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_nth_root
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1521,6 +1568,7 @@ The optional third argument must be of the same form as the list returned by
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_order
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1624,6 +1672,7 @@ The following table shows a very small example of RSA.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_power_table
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1691,6 +1740,7 @@ The optional second argument must be of the same form as the list returned by
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_primroot
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1705,6 +1755,7 @@ If the option variable @mref{zn_primroot_verbose} (default: @code{false}) is
 set to @code{true}, a message will be printed when @code{zn_primroot_limit} is reached. 
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_primroot_limit
 @category{Number theory}
 @closecatbox
 @end defvr
@@ -1756,7 +1807,9 @@ The optional third argument must be of the same form as the list returned by
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Predicate functions  @subentry  zn_primroot_p
 @category{Predicate functions}
+@ctindex  Number theory  @subentry  zn_primroot_p
 @category{Number theory}
 @closecatbox
 @end deffn
@@ -1776,6 +1829,7 @@ Only if @code{zn_primroot_pretest} is set to @code{true} this pretest will be
 performed.
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_primroot_pretest
 @category{Number theory}
 @closecatbox
 @end defvr
@@ -1789,6 +1843,7 @@ Controls whether @mref{zn_primroot} prints a message when reaching
 @mrefdot{zn_primroot_limit}
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  zn_primroot_verbose
 @category{Number theory}
 @closecatbox
 @end defvr
