--- a/doc/info/asympa.texi
+++ b/doc/info/asympa.texi
@@ -16,6 +16,7 @@ numerical analysis.
 @code{load ("asympa")} loads this package.
 
 @opencatbox{Categories:}
+@ctindex  Package asympa  @subentry  asympa
 @category{Package asympa}
 @closecatbox
 @end deffn
