--- a/doc/info/augmented_lagrangian.texi
+++ b/doc/info/augmented_lagrangian.texi
@@ -147,9 +147,13 @@ Same example as before, but this time the gradient is supplied as an argument.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  augmented_lagrangian_method
 @category{Numerical methods}
+@ctindex  Optimization  @subentry  augmented_lagrangian_method
 @category{Optimization}
+@ctindex  Share packages  @subentry  augmented_lagrangian_method
 @category{Share packages}
+@ctindex  Package augmented_lagrangian   @subentry  augmented_lagrangian_method
 @category{Package augmented_lagrangian} 
 @closecatbox
 
