--- a/doc/info/bitwise.texi
+++ b/doc/info/bitwise.texi
@@ -50,8 +50,11 @@ Inverts all bits of a signed integer. The result of this action reads
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bit_not
 @category{Number theory}
+@ctindex  Binary operations  @subentry  bit_not
 @category{Binary operations}
+@ctindex  Package bitwise  @subentry  bit_not
 @category{Package bitwise}
 @closecatbox
 @end deffn
@@ -113,8 +116,11 @@ is taken into consideration by the function.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bit_and
 @category{Number theory}
+@ctindex  Binary operations  @subentry  bit_and
 @category{Binary operations}
+@ctindex  Package bitwise  @subentry  bit_and
 @category{Package bitwise}
 @closecatbox
 @end deffn
@@ -176,8 +182,11 @@ is taken into consideration by the function.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bit_or
 @category{Number theory}
+@ctindex  Binary operations  @subentry  bit_or
 @category{Binary operations}
+@ctindex  Package bitwise  @subentry  bit_or
 @category{Package bitwise}
 @closecatbox
 @end deffn
@@ -239,8 +248,11 @@ is taken into consideration by the function.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bit_xor
 @category{Number theory}
+@ctindex  Binary operations  @subentry  bit_xor
 @category{Binary operations}
+@ctindex  Package bitwise  @subentry  bit_xor
 @category{Package bitwise}
 @closecatbox
 @end deffn
@@ -290,8 +302,11 @@ this process. The result of @code{bit_lsh} therefore is @code{int * 2}.
 @end group
 @end example
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bit_lsh
 @category{Number theory}
+@ctindex  Binary operations  @subentry  bit_lsh
 @category{Binary operations}
+@ctindex  Package bitwise  @subentry  bit_lsh
 @category{Package bitwise}
 @closecatbox
 @end deffn
@@ -346,8 +361,11 @@ this process.
 @end group
 @end example
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bit_rsh
 @category{Number theory}
+@ctindex  Binary operations  @subentry  bit_rsh
 @category{Binary operations}
+@ctindex  Package bitwise  @subentry  bit_rsh
 @category{Package bitwise}
 @closecatbox
 @end deffn
@@ -385,8 +403,11 @@ number @code{int}. This function only operates on positive numbers.
 @end group
 @end example
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bit_length
 @category{Number theory}
+@ctindex  Binary operations  @subentry  bit_length
 @category{Binary operations}
+@ctindex  Package bitwise  @subentry  bit_length
 @category{Package bitwise}
 @closecatbox
 @end deffn
@@ -493,8 +514,11 @@ is taken into consideration by the function.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Number theory  @subentry  bit_onep
 @category{Number theory}
+@ctindex  Binary operations  @subentry  bit_onep
 @category{Binary operations}
+@ctindex  Package bitwise  @subentry  bit_onep
 @category{Package bitwise}
 @closecatbox
 @end deffn
