--- a/doc/info/bode.texi
+++ b/doc/info/bode.texi
@@ -56,7 +56,9 @@ Examples (1 through 7 from
 To use this function write first @code{load("bode")}. See also @mrefdot{bode_phase}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  bode_gain
 @category{Plotting}
+@ctindex  Package bode  @subentry  bode_gain
 @category{Package bode}
 @closecatbox
 
@@ -118,7 +120,9 @@ Examples (1 through 7 from
 To use this function write first @code{load("bode")}. See also @mrefdot{bode_gain}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  bode_phase
 @category{Plotting}
+@ctindex  Package bode  @subentry  bode_phase
 @category{Package bode}
 @closecatbox
 
