--- a/doc/info/clebsch_gordan.texi
+++ b/doc/info/clebsch_gordan.texi
@@ -11,6 +11,7 @@
 Compute the Clebsch-Gordan coefficient @verb{|<j1, j2, m1, m2 | j, m>|}.
 
 @opencatbox{Categories:}
+@ctindex  clebsch_gordan  @subentry  clebsch_gordan
 @category{clebsch_gordan}
 @closecatbox
 @end deffn
@@ -22,6 +23,7 @@ Compute Racah's V coefficient (computed in terms of a related
 Clebsch-Gordan coefficient).
 
 @opencatbox{Categories:}
+@ctindex  clebsch_gordan  @subentry  racah_v
 @category{clebsch_gordan}
 @closecatbox
 @end deffn
@@ -32,6 +34,7 @@ Clebsch-Gordan coefficient).
 Compute Racah's W coefficient (computed in terms of a Wigner @verb{|6j|} symbol)
 
 @opencatbox{Categories:}
+@ctindex  clebsch_gordan  @subentry  racah_w
 @category{clebsch_gordan}
 @closecatbox
 @end deffn
@@ -43,6 +46,7 @@ Compute Wigner's @verb{|3j|} symbol (computed in terms of a related
 Clebsch-Gordan coefficient).
 
 @opencatbox{Categories:}
+@ctindex  clebsch_gordan  @subentry  wigner_3j
 @category{clebsch_gordan}
 @closecatbox
 @end deffn
@@ -53,6 +57,7 @@ Clebsch-Gordan coefficient).
 Compute Wigner's @verb{|6j|} symbol.
 
 @opencatbox{Categories:}
+@ctindex  clebsch_gordan  @subentry  wigner_6j
 @category{clebsch_gordan}
 @closecatbox
 @end deffn
@@ -63,6 +68,7 @@ Compute Wigner's @verb{|6j|} symbol.
 Compute Wigner's @verb{|9j|} symbol.
 
 @opencatbox{Categories:}
+@ctindex  clebsch_gordan  @subentry  wigner_9j
 @category{clebsch_gordan}
 @closecatbox
 @end deffn
