--- a/doc/info/cobyla.texi
+++ b/doc/info/cobyla.texi
@@ -45,9 +45,13 @@ References:
 [3] M. J. D. Powell, "Direct search algorithms for optimization calculations," Acta Numerica 7, 287-336 (1998).  Also available as University of Cambridge, Department of Applied Mathematics and Theoretical Physics,  Numerical Analysis Group, Report NA1998/04 from @url{http://www.damtp.cam.ac.uk/user/na/reports.html}
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods   @subentry  Introduction to cobyla
 @category{Numerical methods} 
+@ctindex  Optimization  @subentry  Introduction to cobyla
 @category{Optimization}
+@ctindex  Share packages  @subentry  Introduction to cobyla
 @category{Share packages}
+@ctindex  Package cobyla  @subentry  Introduction to cobyla
 @category{Package cobyla}
 @closecatbox
 
