--- a/doc/info/combinatorics.texi
+++ b/doc/info/combinatorics.texi
@@ -41,7 +41,9 @@ with the command @code{load("combinatorics")}.
 
 
 @opencatbox{Categories:}
+@ctindex  Share packages  @subentry  Package combinatorics
 @category{Share packages}
+@ctindex  Package combinatorics  @subentry  Package combinatorics
 @category{Package combinatorics}
 @closecatbox
 
@@ -81,6 +83,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  apply_cycles
 @category{Package combinatorics}
 @closecatbox
 
@@ -125,6 +128,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  cyclep
 @category{Package combinatorics}
 @closecatbox
 
@@ -154,6 +158,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_cycles
 @category{Package combinatorics}
 @closecatbox
 
@@ -183,6 +188,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_decomp
 @category{Package combinatorics}
 @closecatbox
 
@@ -213,6 +219,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_inverse
 @category{Package combinatorics}
 @closecatbox
 
@@ -243,6 +250,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_length
 @category{Package combinatorics}
 @closecatbox
 
@@ -269,6 +277,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_lex_next
 @category{Package combinatorics}
 @closecatbox
 
@@ -298,6 +307,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_lex_rank
 @category{Package combinatorics}
 @closecatbox
 
@@ -326,6 +336,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_lex_unrank
 @category{Package combinatorics}
 @closecatbox
 
@@ -354,6 +365,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_next
 @category{Package combinatorics}
 @closecatbox
 
@@ -383,6 +395,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_parity
 @category{Package combinatorics}
 @closecatbox
 
@@ -412,6 +425,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_rank
 @category{Package combinatorics}
 @closecatbox
 
@@ -440,6 +454,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_undecomp
 @category{Package combinatorics}
 @closecatbox
 
@@ -468,6 +483,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perm_unrank
 @category{Package combinatorics}
 @closecatbox
 
@@ -500,6 +516,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  permp
 @category{Package combinatorics}
 @closecatbox
 
@@ -558,6 +575,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perms
 @category{Package combinatorics}
 @closecatbox
 
@@ -621,6 +639,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  perms_lex
 @category{Package combinatorics}
 @closecatbox
 
@@ -646,6 +665,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  permult
 @category{Package combinatorics}
 @closecatbox
 
@@ -681,6 +701,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  permute
 @category{Package combinatorics}
 @closecatbox
 
@@ -708,6 +729,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package combinatorics  @subentry  random_perm
 @category{Package combinatorics}
 @closecatbox
 
