--- a/doc/info/descriptive.texi
+++ b/doc/info/descriptive.texi
@@ -194,8 +194,11 @@ One must take care when working with categorical data. In the next example, symb
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Descriptive statistics  @subentry  Introduction to descriptive
 @category{Descriptive statistics}
+@ctindex  Share packages  @subentry  Introduction to descriptive
 @category{Share packages}
+@ctindex  Package descriptive  @subentry  Introduction to descriptive
 @category{Package descriptive}
 @closecatbox
 
@@ -278,6 +281,7 @@ Multivariate frequency table.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  build_sample
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -379,6 +383,7 @@ The first argument may be an array.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  continuous_freq
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -432,6 +437,7 @@ The argument may be an array.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  discrete_freq
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -450,6 +456,7 @@ the result by the standard deviation. When the input is a matrix,
 divides each component by the corresponding standard deviation.
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  standardize
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -623,6 +630,7 @@ Here, the first component is meaningless, since @code{A} and @code{B} are catego
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  subsample
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -675,6 +683,7 @@ Add a constant column and remove the third variable.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  transform_sample
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -742,6 +751,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  mean
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -790,6 +800,7 @@ Example:
 See also function @mrefdot{var1}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  var
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -846,6 +857,7 @@ Example:
 See also function @mrefdot{var}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  var1
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -886,6 +898,7 @@ Example:
 See also functions @mref{var} and @mrefdot{std1}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  std
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -926,6 +939,7 @@ Example:
 See also functions @mref{var1} and @mrefdot{std}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  std1
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -984,6 +998,7 @@ Example:
 See also function @mrefdot{central_moment}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  noncentral_moment
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1040,6 +1055,7 @@ Example:
 See also functions @mref{central_moment} and @mrefdot{mean}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  central_moment
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1078,6 +1094,7 @@ The variation coefficient is the quotient between the sample standard deviation 
 See also functions @mref{std} and @mrefdot{mean}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  cv
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1118,6 +1135,7 @@ which are associated to statistical variables.
 See also function @mrefdot{smax}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  smin
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1158,6 +1176,7 @@ which are associated to statistical variables.
 See also function @mrefdot{smin}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  smax
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1195,6 +1214,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  range
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1235,6 +1255,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  quantile
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1278,6 +1299,7 @@ The median is the 1/2-quantile.
 See also function @mrefdot{quantile}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  median
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1318,6 +1340,7 @@ The interquartilic range is the difference between the third and first quartiles
 See also function @mrefdot{quantile}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  qrange
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1376,6 +1399,7 @@ Example:
 See also function @mrefdot{mean}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  mean_deviation
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1434,6 +1458,7 @@ Example:
 See also function @mrefdot{mean}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  median_deviation
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1492,6 +1517,7 @@ Example:
 See also functions @mref{mean} and @mrefdot{geometric_mean}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  harmonic_mean
 @category{Package descriptive}
 @closecatbox
 
@@ -1549,6 +1575,7 @@ Example:
 See also functions @mref{mean} and @mrefdot{harmonic_mean}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  geometric_mean
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1605,6 +1632,7 @@ Example:
 See also functions @mrefcomma{mean} @mref{var} and @mrefdot{skewness}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  kurtosis
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1661,6 +1689,7 @@ Example:
 See also functions @mrefcomma{mean}, @mref{var} and @mrefdot{kurtosis}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  skewness
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1715,6 +1744,7 @@ Example:
 See also functions @mrefcomma{mean} @mref{var} and @mrefdot{median}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  pearson_skewness
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1771,6 +1801,7 @@ Example:
 See also function @mrefdot{quantile}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  quartile_skewness
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1842,6 +1873,7 @@ Estimate survival probabilities.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  km
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1896,6 +1928,7 @@ Empirical distribution function.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  cdf_empirical
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -1952,6 +1985,7 @@ Example:
 See also function @mrefdot{cov1}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  cov
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -2008,6 +2042,7 @@ Example:
 See also function @mrefdot{cov}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  cov1
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -2085,6 +2120,7 @@ Calculate the @code{global_variances} from the covariance matrix.
 See also @mref{cov} and @mrefdot{cov1}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  global_variances
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -2164,6 +2200,7 @@ Calculate de correlation matrix from the covariance matrix.
 See also @mref{cov} and @mrefdot{cov1}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  cor
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -2290,6 +2327,7 @@ Example:
 See also @mref{cov} and @mrefdot{cov1}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  list_correlations
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -2400,6 +2438,7 @@ but option @code{data=false} must be used.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  principal_components
 @category{Package descriptive}
 @closecatbox
 @end deffn
@@ -2600,7 +2639,9 @@ For bars diagrams related options, see @mref{barsplot} of package @ref{draw-pkg}
 See also functions @mref{histogram} and @mrefdot{piechart}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  barsplot
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  barsplot
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -2636,7 +2677,9 @@ Example: @code{barsplot} in a multiplot context.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  barsplot_description
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  barsplot_description
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -2789,7 +2832,9 @@ Option @var{range} can be used to handle outliers.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  boxplot
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  boxplot
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -2802,7 +2847,9 @@ suitable for creating complex scenes, together with other
 graphic objects. 
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  boxplot_description
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  boxplot_description
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -2943,7 +2990,9 @@ Freedmann - Diakonis robust method for optimal search of the number of classes.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  histogram
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  histogram
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -2973,7 +3022,9 @@ the @code{xrange} and adding an explicit curve into the scene:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  histogram_description
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  histogram_description
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -3044,7 +3095,9 @@ Example:
 See also function @mrefdot{barsplot}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  piechart
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  piechart
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -3057,7 +3110,9 @@ suitable for creating complex scenes, together with other
 graphic objects.
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  piechart_description
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  piechart_description
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -3171,7 +3226,9 @@ For plotting isolated or line-joined points in two and three dimensions,
 see @code{points}. See also @mrefdot{histogram}
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  scatterplot
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  scatterplot
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -3184,7 +3241,9 @@ suitable for creating complex scenes, together with other
 graphic objects.
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  scatterplot_description
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  scatterplot_description
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -3263,7 +3322,9 @@ Location and radius defined by the user.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  starplot
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  starplot
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -3276,7 +3337,9 @@ suitable for creating complex scenes, together with other
 graphic objects. 
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  starplot_description
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  starplot_description
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -3340,7 +3403,9 @@ key: 6|3 =  6.3
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package descriptive  @subentry  stemplot
 @category{Package descriptive}
+@ctindex  Plotting  @subentry  stemplot
 @category{Plotting}
 @closecatbox
 @end deffn
