--- a/doc/info/drawdf.texi
+++ b/doc/info/drawdf.texi
@@ -61,10 +61,15 @@ If only one ODE is given, @code{drawdf} will implicitly admit
 equation into a system of two autonomous equations.
 
 @opencatbox{Categories:}
+@ctindex  Differential equations  @subentry  Introduction to drawdf
 @category{Differential equations}
+@ctindex  Plotting  @subentry  Introduction to drawdf
 @category{Plotting}
+@ctindex  Share packages  @subentry  Introduction to drawdf
 @category{Share packages}
+@ctindex  Package drawdf  @subentry  Introduction to drawdf
 @category{Package drawdf}
+@ctindex  Package draw  @subentry  Introduction to drawdf
 @category{Package draw}
 @closecatbox
 
@@ -277,6 +282,7 @@ generate graphics.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package drawdf  @subentry  drawdf
 @category{Package drawdf}
 @closecatbox
 
