--- a/doc/info/dynamics.texi
+++ b/doc/info/dynamics.texi
@@ -18,8 +18,11 @@ All the functions in this package will be loaded automatically the first
 time they are used.
 
 @opencatbox{Categories:}
+@ctindex  Dynamical systems  @subentry  The dynamics package
 @category{Dynamical systems}
+@ctindex  Share packages  @subentry  The dynamics package
 @category{Share packages}
+@ctindex  Package dynamics  @subentry  The dynamics package
 @category{Package dynamics}
 @closecatbox
 
@@ -50,7 +53,9 @@ same as for @mrefdot{plot2d}
 @end ifnotinfo
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  chaosgame
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  chaosgame
 @category{Plotting}
 @closecatbox
 
@@ -89,7 +94,9 @@ depend on @var{y}, but any other variable can be used),
 
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  evolution
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  evolution
 @category{Plotting}
 @closecatbox
 
@@ -139,7 +146,9 @@ And an enlargement of a small region in that fractal:
 @end ifnotinfo
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  evolution2d
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  evolution2d
 @category{Plotting}
 @closecatbox
 
@@ -181,7 +190,9 @@ options are the same as for @mrefdot{plot2d}
 @end ifnotinfo
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ifs
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ifs
 @category{Plotting}
 @closecatbox
 
@@ -229,7 +240,9 @@ To enlarge the region around the lower bifurcation near x @code{=} -1.25 use:
 @end ifnotinfo
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  orbits
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  orbits
 @category{Plotting}
 @closecatbox
 
@@ -269,7 +282,9 @@ reached. The options are the same as for @mrefdot{plot2d}
 @end ifnotinfo
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  staircase
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  staircase
 @category{Plotting}
 @closecatbox
 
@@ -356,7 +371,9 @@ The accepted values for the colors are the same as for the @mref{color}
 option of plot2d. 
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  scene
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  scene
 @category{Plotting}
 @closecatbox
 
@@ -374,7 +391,9 @@ must be a real number; an angle of 0 means that the camera points in the
 direction of the y axis and the x axis will appear on the right.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -387,7 +406,9 @@ The color of the graphics window's background. It accepts color names or
 hexadecimal red-green-blue strings (see the @mref{color} option of plot2d).
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -402,7 +423,9 @@ and the default angle of 30 means that the camera is pointing 30 degrees
 down from the horizontal.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -415,7 +438,9 @@ The height, in pixels, of the graphics window. @var{pixels} must be a
 positive integer number.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -429,7 +454,9 @@ end of the list is reached. Writing just ``restart'' is equivalent to
 [restart, @var{true}].
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -442,7 +469,9 @@ The amount of time, in mili-seconds, between iterations among
 consecutive animation frames. @var{time} must be a real number.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -455,7 +484,9 @@ The width, in pixels, of the graphics window. @var{pixels} must be a
 positive integer number.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -469,7 +500,9 @@ window created by Xmaxima for the @code{scene} graphics. The default
 value @code{.scene} implies that a new top level window will be created.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -482,7 +515,9 @@ Default value: @code{Xmaxima: scene}
 window created by @code{scene}.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -513,7 +548,9 @@ axis when the play button is pressed.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -528,7 +565,9 @@ planes. The lengths of the three edges can be changed with options
 the faces can be rotated with option @mxrefdot{object_orientation,orientation}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -548,7 +587,9 @@ be at the origin; use options @mxref{object_orientation,orientation} and
 @mxref{object_center,center} to change those defaults.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -559,7 +600,9 @@ be at the origin; use options @mxref{object_orientation,orientation} and
 A sphere with default radius of 0.5 units and center at the origin. 
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -583,7 +626,9 @@ the animation restart after the play button is pressed again.
 See also @mxrefdot{object_track,track}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -597,7 +642,9 @@ shown. A value of 1 for @var{number} makes the base visible and a value
 of 0 makes it invisible.
  
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -612,7 +659,9 @@ real numbers, or 3 real numbers separated by commas. In a cylinder, cone
 or cube it will be at half its height and in a sphere at its center.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -625,7 +674,9 @@ The color of the object. It accepts color names or hexadecimal
 red-green-blue strings (see the @mref{color} option of plot2d).
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -644,7 +695,9 @@ See also @mxref{object_startphi,startphi} and
 @mxrefdot{object_phiresolution,phiresolution}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -663,7 +716,9 @@ See also @mxref{object_starttheta,starttheta} and
 @mxrefdot{object_thetaresolution,thetaresolution}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -676,7 +731,9 @@ Default value: @code{1}
 or a cylinder.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -689,7 +746,9 @@ The width of the lines, when option @mxref{object_wireframe,wireframe} is
 used. @var{value} must be a positive number.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -703,7 +762,9 @@ more transparent the object will become. The default value of 1 means a
 completely opaque object.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -718,7 +779,9 @@ numbers separated by commas. @strong{Example}: @code{[0, 0, 90]} rotates
 the x axis of the object to the y axis of the reference frame.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -732,7 +795,9 @@ other dimensions are defined. @var{point} can be a list with 3
 real numbers, or 3 real numbers separated by commas.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -749,7 +814,9 @@ See also @mxref{object_startphi,startphi} and
 @mxrefdot{object_endphi,endphi}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -764,7 +831,9 @@ See also @mxref{object_surface,surface} and
 @mxrefdot{object_wireframe,wireframe}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  points  [points]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  points  [points]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -777,7 +846,9 @@ The size of the points, when option @mxref{object_points,points} is
 used. @var{value} must be a positive number.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -790,7 +861,9 @@ The coordinates of the object's position. @var{point} can be a list with 3
 real numbers, or 3 real numbers separated by commas.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -803,7 +876,9 @@ The radius or a sphere or the distance from the axis to the base's
 vertices in a cylinder or a cone. @var{value} must be a positive number.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -816,7 +891,9 @@ Default value: @code{6}
 edges in the base of a cone or a cylinder.
  
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -833,7 +910,9 @@ dimensions in the y direction to half and leaves the z dimensions
 unchanged.
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -852,7 +931,9 @@ See also @mxref{object_endphi,endphi} and
 @mxrefdot{object_phiresolution,phiresolution}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -871,7 +952,9 @@ See also @mxref{object_endtheta,endtheta} and
 @mxrefdot{object_thetaresolution,thetaresolution}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -885,7 +968,9 @@ the default behavior, which can be changed using either the option
 @mxref{object_points,points} or @mxrefdot{object_wireframe,wireframe}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  surface [surface]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  surface [surface]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -902,7 +987,9 @@ See also @mxref{object_starttheta,starttheta} and
 @mxrefdot{object_endtheta,endtheta}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -937,7 +1024,9 @@ See also @mxrefdot{object_animation,animation}
 
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -951,7 +1040,9 @@ number. See also @mxref{object_ylength,ylength} and
 @mxrefdot{object_zlength,zlength}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -965,7 +1056,9 @@ number. See also @mxref{object_xlength,xlength} and
 @mxrefdot{object_zlength,zlength}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -979,7 +1072,9 @@ The height of a cube in z the direction. @var{length} must be a positive
  @mxrefdot{object_ylength,ylength}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  ]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -994,7 +1089,9 @@ See also @mxref{object_surface,surface} and
 @mxrefdot{object_points,points}
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  wireframe  [wireframe]
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  wireframe  [wireframe]
 @category{Plotting}
 @closecatbox
 @end defvr
