--- a/doc/info/engineering-format.texi
+++ b/doc/info/engineering-format.texi
@@ -41,8 +41,11 @@ mat.lisp
 See also @mref{fpprintprec} and @mrefdot{float}
 
 @opencatbox{Categories:}
+@ctindex  Display functions  @subentry  engineering_format_floats
 @category{Display functions}
+@ctindex  Global flags  @subentry  engineering_format_floats
 @category{Global flags}
+@ctindex  Share packages  @subentry  engineering_format_floats
 @category{Share packages}
 @closecatbox
 @end defvr
@@ -85,8 +88,11 @@ mat.lisp
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Display functions  @subentry  engineering_format_min
 @category{Display functions}
+@ctindex  Global flags  @subentry  engineering_format_min
 @category{Global flags}
+@ctindex  Share packages  @subentry  engineering_format_min
 @category{Share packages}
 @closecatbox
 @end defvr
@@ -100,8 +106,11 @@ The maximum absolute value that isn't automatically converted to the engineering
 See also @mref{engineering_format_min} and @mrefdot{engineering_format_floats}
 
 @opencatbox{Categories:}
+@ctindex  Display functions  @subentry  engineering_format_max
 @category{Display functions}
+@ctindex  Global flags  @subentry  engineering_format_max
 @category{Global flags}
+@ctindex  Share packages  @subentry  engineering_format_max
 @category{Share packages}
 @closecatbox
 @end defvr
