--- a/doc/info/f90.texi
+++ b/doc/info/f90.texi
@@ -7,7 +7,9 @@
 @section Package f90
 
 @opencatbox{Categories:}
+@ctindex  Share packages  @subentry  Package f90
 @category{Share packages}
+@ctindex  Package f90  @subentry  Package f90
 @category{Package f90}
 @closecatbox
 @c -----------------------------------------------------------------------------
@@ -61,8 +63,11 @@ foo = yyy**4+4*xxx*yyy**3+28*yyy**3+6*xx&
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Global variables  @subentry  f90_output_line_length_max
 @category{Global variables}
+@ctindex  Translation and compilation  @subentry  f90_output_line_length_max
 @category{Translation and compilation}
+@ctindex  Package f90  @subentry  f90_output_line_length_max
 @category{Package f90}
 @closecatbox
 @end defvr
@@ -135,7 +140,9 @@ end
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Translation and compilation  @subentry  f90
 @category{Translation and compilation}
+@ctindex  Package f90  @subentry  f90
 @category{Package f90}
 @closecatbox
 @end deffn
