--- a/doc/info/finance.texi
+++ b/doc/info/finance.texi
@@ -37,6 +37,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  days360
 @category{Package finance}
 @closecatbox
 
@@ -59,6 +60,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  fv
 @category{Package finance}
 @closecatbox
 
@@ -81,6 +83,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  pv
 @category{Package finance}
 @closecatbox
 
@@ -103,6 +106,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  graph_flow
 @category{Package finance}
 @closecatbox
 
@@ -125,6 +129,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  annuity_pv
 @category{Package finance}
 @closecatbox
 
@@ -147,6 +152,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  annuity_fv
 @category{Package finance}
 @closecatbox
 
@@ -169,6 +175,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  geo_annuity_pv
 @category{Package finance}
 @closecatbox
 
@@ -191,6 +198,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  geo_annuity_fv
 @category{Package finance}
 @closecatbox
 
@@ -225,6 +233,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  amortization
 @category{Package finance}
 @closecatbox
 
@@ -264,6 +273,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  arit_amortization
 @category{Package finance}
 @closecatbox
 
@@ -303,6 +313,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  geo_amortization
 @category{Package finance}
 @closecatbox
 
@@ -342,6 +353,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  saving
 @category{Package finance}
 @closecatbox
 
@@ -364,6 +376,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  npv
 @category{Package finance}
 @closecatbox
 
@@ -388,6 +401,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  irr
 @category{Package finance}
 @closecatbox
 
@@ -413,6 +427,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package finance  @subentry  benefit_cost
 @category{Package finance}
 @closecatbox
 
