--- a/doc/info/fractals.texi
+++ b/doc/info/fractals.texi
@@ -62,6 +62,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package fractals  @subentry  sierpinskiale
 @category{Package fractals}
 @closecatbox
 
@@ -82,6 +83,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package fractals  @subentry  treefale
 @category{Package fractals}
 @closecatbox
 
@@ -102,6 +104,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package fractals  @subentry  fernfale
 @category{Package fractals}
 @closecatbox
 
@@ -129,6 +132,7 @@ the computing time is also related with the number of grid points.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package fractals  @subentry  mandelbrot_set
 @category{Package fractals}
 @closecatbox
 
@@ -157,6 +161,7 @@ Example:
 See also @mref{julia_parameter}.
 
 @opencatbox{Categories:}
+@ctindex  Package fractals  @subentry  julia_set
 @category{Package fractals}
 @closecatbox
 
@@ -174,6 +179,7 @@ Its default value is @mref{%i}; we  suggest the  values @code{-.745+%i*.113002},
 @code{.011031-%i*.67037}.
 
 @opencatbox{Categories:}
+@ctindex  Package fractals  @subentry  julia_parameter
 @category{Package fractals}
 @closecatbox
 
@@ -208,6 +214,7 @@ the computing time is also related with the number of grid points.
 See also @mref{julia_parameter}.
 
 @opencatbox{Categories:}
+@ctindex  Package fractals  @subentry  julia_sin
 @category{Package fractals}
 @closecatbox
 
@@ -239,6 +246,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package fractals  @subentry  snowmap
 @category{Package fractals}
 @closecatbox
 
@@ -264,6 +272,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package fractals  @subentry  hilbertmap
 @category{Package fractals}
 @closecatbox
 
@@ -283,6 +292,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package fractals  @subentry  sierpinskimap
 @category{Package fractals}
 @closecatbox
 
