--- a/doc/info/ggf.texi
+++ b/doc/info/ggf.texi
@@ -23,6 +23,7 @@ computation accurate enough.
 See also @mref{ggf}.
 
 @opencatbox{Categories:}
+@ctindex  Package ggf  @subentry  GGFINFINITY
 @category{Package ggf}
 @closecatbox
 
@@ -45,6 +46,7 @@ generating functions.
 See also @mref{ggf}.
 
 @opencatbox{Categories:}
+@ctindex  Package ggf  @subentry  GGFCFMAX
 @category{Package ggf}
 @closecatbox
 
@@ -64,8 +66,11 @@ This function is controlled by global variables @var{GGFINFINITY} and @var{GGFCF
 To use this function write first @code{load("ggf")}.
 
 @opencatbox{Categories:}
+@ctindex  Generating functions  @subentry  ggf
 @category{Generating functions}
+@ctindex  Share packages  @subentry  ggf
 @category{Share packages}
+@ctindex  Package ggf  @subentry  ggf
 @category{Package ggf}
 @closecatbox
 
