--- a/doc/info/impdiff.texi
+++ b/doc/info/impdiff.texi
@@ -15,8 +15,11 @@ This subroutine computes implicit derivatives of multivariable functions.
 To use this function write first @code{load("impdiff")}.
 
 @opencatbox{Categories:}
+@ctindex  Differential calculus  @subentry  implicit_derivative
 @category{Differential calculus}
+@ctindex  Share packages  @subentry  implicit_derivative
 @category{Share packages}
+@ctindex  Package impdiff  @subentry  implicit_derivative
 @category{Package impdiff}
 @closecatbox
 
