--- a/doc/info/interpol.texi
+++ b/doc/info/interpol.texi
@@ -12,8 +12,11 @@ splines methods for polynomial interpolation.
 For comments, bugs or suggestions, please contact me at @var{'mario AT edu DOT xunta DOT es'}.
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  Introduction to interpol
 @category{Numerical methods}
+@ctindex  Share packages  @subentry  Introduction to interpol
 @category{Share packages}
+@ctindex  Package interpol  @subentry  Introduction to interpol
 @category{Package interpol}
 @closecatbox
 
@@ -123,6 +126,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package interpol  @subentry  lagrange
 @category{Package interpol}
 @closecatbox
 
@@ -184,6 +188,7 @@ Otherwise, @code{charfun2} returns a partially-evaluated result in terms of @mre
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package interpol  @subentry  charfun2
 @category{Package interpol}
 @closecatbox
 
@@ -263,6 +268,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package interpol  @subentry  linearinterpol
 @category{Package interpol}
 @closecatbox
 
@@ -375,6 +381,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package interpol  @subentry  cspline
 @category{Package interpol}
 @closecatbox
 
@@ -424,6 +431,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package interpol  @subentry  ratinterpol
 @category{Package interpol}
 @closecatbox
 
