--- a/doc/info/lindstedt.texi
+++ b/doc/info/lindstedt.texi
@@ -43,8 +43,11 @@ T = (- ---- - -- + 1) t]]
 To use this function write first @code{load("makeOrders")} and @code{load("lindstedt")}.
 
 @opencatbox{Categories:}
+@ctindex  Differential equations  @subentry  Lindstedt
 @category{Differential equations}
+@ctindex  Share packages  @subentry  Lindstedt
 @category{Share packages}
+@ctindex  Package lindstedt  @subentry  Lindstedt
 @category{Package lindstedt}
 @closecatbox
 
