--- a/doc/info/makeOrders.texi
+++ b/doc/info/makeOrders.texi
@@ -27,8 +27,11 @@ where @code{[0, 1]} is associated with the term @math{b} and @code{[2, 3]} with 
 To use this function write first @code{load("makeOrders")}.
 
 @opencatbox{Categories:}
+@ctindex  Polynomials  @subentry  makeOrders
 @category{Polynomials}
+@ctindex  Share packages  @subentry  makeOrders
 @category{Share packages}
+@ctindex  Package makeOrders  @subentry  makeOrders
 @category{Package makeOrders}
 @closecatbox
 
