--- a/doc/info/minpack.texi
+++ b/doc/info/minpack.texi
@@ -10,9 +10,13 @@
 Fortran library MINPACK, as obtained from Netlib.
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods   @subentry  Introduction to minpack
 @category{Numerical methods} 
+@ctindex  Optimization  @subentry  Introduction to minpack
 @category{Optimization}
+@ctindex  Share packages  @subentry  Introduction to minpack
 @category{Share packages}
+@ctindex  Package minpack  @subentry  Introduction to minpack
 @category{Package minpack}
 @closecatbox
 
