--- a/doc/info/numericalio.texi
+++ b/doc/info/numericalio.texi
@@ -20,9 +20,13 @@ Otherwise, @code{numericalio} can guess, to some degree, the structure of an obj
 to store the data, and return that object.
 
 @opencatbox{Categories:}
+@ctindex  File input  @subentry  Introduction to numericalio
 @category{File input}
+@ctindex  File output  @subentry  Introduction to numericalio
 @category{File output}
+@ctindex  Share packages  @subentry  Introduction to numericalio
 @category{Share packages}
+@ctindex  Package numericalio  @subentry  Introduction to numericalio
 @category{Package numericalio}
 @closecatbox
 
@@ -137,7 +141,9 @@ See also @mrefcomma{openr} @mrefcomma{read_array} @mrefcomma{read_hashed_array}
 @mrefdot{read_nested_list}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  read_matrix
 @category{Package numericalio}
+@ctindex  File input  @subentry  read_matrix
 @category{File input}
 @closecatbox
 
@@ -166,7 +172,9 @@ See also @mrefcomma{openr} @mrefcomma{read_matrix} @mrefcomma{read_hashed_array}
 @mrefcomma{read_list} @mref{read_binary_array} and @mrefdot{read_nested_list}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  read_array
 @category{Package numericalio}
+@ctindex  File input  @subentry  read_array
 @category{File input}
 @closecatbox
 
@@ -197,7 +205,9 @@ See also @mrefcomma{openr} @mrefcomma{read_matrix} @mrefcomma{read_array}
 @mref{read_list} and @mrefdot{read_nested_list}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  read_hashed_array
 @category{Package numericalio}
+@ctindex  File input  @subentry  read_hashed_array
 @category{File input}
 @closecatbox
 
@@ -226,7 +236,9 @@ See also @mrefcomma{openr} @mrefcomma{read_matrix} @mrefcomma{read_array}
 @mref{read_list} and @mrefdot{read_hashed_array}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  read_nested_list
 @category{Package numericalio}
+@ctindex  File input  @subentry  read_nested_list
 @category{File input}
 @closecatbox
 
@@ -257,7 +269,9 @@ See also @mrefcomma{openr} @mrefcomma{read_matrix} @mrefcomma{read_array}
 @mrefcomma{read_nested_list} @mref{read_binary_list} and @mrefdot{read_hashed_array}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  read_list
 @category{Package numericalio}
+@ctindex  File input  @subentry  read_list
 @category{File input}
 @closecatbox
 
@@ -302,7 +316,9 @@ If @var{separator_flag} is not specified, the file is assumed space-delimited.
 See also @mref{openw} and @mrefdot{read_matrix}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  write_data
 @category{Package numericalio}
+@ctindex  File output  @subentry  write_data
 @category{File output}
 @closecatbox
 
@@ -321,6 +337,7 @@ and @code{msb} which indicates most-significant byte first, also called big-endi
 If not specified, @code{numericalio} assumes the external byte order is most-significant byte first.
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  assume_external_byte_order
 @category{Package numericalio}
 @closecatbox
 @end deffn
@@ -332,7 +349,9 @@ Returns an input stream of 8-bit unsigned bytes to read the file named by @var{f
 See also @mref{openw_binary} and @mrefdot{openr}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  openr_binary
 @category{Package numericalio}
+@ctindex  File input  @subentry  openr_binary
 @category{File input}
 @closecatbox
 @end deffn
@@ -344,7 +363,9 @@ Returns an output stream of 8-bit unsigned bytes to write the file named by @var
 See also @mrefcomma{openr_binary} @mref{opena_binary} and @mrefdot{openw}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  openw_binary
 @category{Package numericalio}
+@ctindex  File output  @subentry  openw_binary
 @category{File output}
 @closecatbox
 @end deffn
@@ -354,7 +375,9 @@ See also @mrefcomma{openr_binary} @mref{opena_binary} and @mrefdot{openw}
 Returns an output stream of 8-bit unsigned bytes to append the file named by @var{file_name}.
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  opena_binary
 @category{Package numericalio}
+@ctindex  File output  @subentry  opena_binary
 @category{File output}
 @closecatbox
 @end deffn
@@ -372,7 +395,9 @@ The byte order in elements of the source is specified by @code{assume_external_b
 See also @mrefdot{read_matrix}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  read_binary_matrix
 @category{Package numericalio}
+@ctindex  File input  @subentry  read_binary_matrix
 @category{File input}
 @closecatbox
 @end deffn
@@ -391,7 +416,9 @@ The byte order in elements of the source is specified by @code{assume_external_b
 See also @mrefdot{read_array}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  read_binary_array
 @category{Package numericalio}
+@ctindex  File input  @subentry  read_binary_array
 @category{File input}
 @closecatbox
 @end deffn
@@ -413,7 +440,9 @@ The byte order in elements of the source is specified by @code{assume_external_b
 See also @mrefdot{read_list}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  read_binary_list
 @category{Package numericalio}
+@ctindex  File input  @subentry  read_binary_list
 @category{File input}
 @closecatbox
 @end deffn
@@ -445,7 +474,9 @@ is specified by @code{assume_external_byte_order}.
 See also @mrefdot{write_data}
 
 @opencatbox{Categories:}
+@ctindex  Package numericalio  @subentry  write_binary_data
 @category{Package numericalio}
+@ctindex  File output  @subentry  write_binary_data
 @category{File output}
 @closecatbox
 @end deffn
