--- a/doc/info/odepack.texi
+++ b/doc/info/odepack.texi
@@ -29,8 +29,11 @@ References:
 [1] Fortran Code is from @url{https://www.netlib.org/odepack/}
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods  @subentry  Introduction to ODEPACK
 @category{Numerical methods}
+@ctindex  Share packages  @subentry  Introduction to ODEPACK
 @category{Share packages}
+@ctindex  Package odepack  @subentry  Introduction to ODEPACK
 @category{Package odepack}
 @closecatbox
 
