--- a/doc/info/opsubst.texi
+++ b/doc/info/opsubst.texi
@@ -77,8 +77,11 @@ However, subscripted operators are allowed:
 To use this function write first @code{load("opsubst")}.
 
 @opencatbox{Categories:}
+@ctindex  Expressions  @subentry  opsubst
 @category{Expressions}
+@ctindex  Share packages  @subentry  opsubst
 @category{Share packages}
+@ctindex  Package opsubst  @subentry  opsubst
 @category{Package opsubst}
 @closecatbox
 
