--- a/doc/info/ratpow.texi
+++ b/doc/info/ratpow.texi
@@ -55,7 +55,9 @@ Returns the highest power of @var{x} in @code{ratnumer(expr)}
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Rational expressions  @subentry  ratp_hipow
 @category{Rational expressions}
+@ctindex  Package ratpow  @subentry  ratp_hipow
 @category{Package ratpow}
 @closecatbox
 @end deffn
@@ -125,7 +127,9 @@ The CRE form of the following equation contains @code{sqrt(x)} and
 
 
 @opencatbox{Categories:}
+@ctindex  Rational expressions  @subentry  ratp_lopow
 @category{Rational expressions}
+@ctindex  Package ratpow  @subentry  ratp_lopow
 @category{Package ratpow}
 @closecatbox
 @end deffn
@@ -151,7 +155,9 @@ returned coefficients are in CRE form except for numbers.
 @end group
 @end example
 @opencatbox{Categories:}
+@ctindex  Rational expressions  @subentry  ratp_coeffs
 @category{Rational expressions}
+@ctindex  Package ratpow  @subentry  ratp_coeffs
 @category{Package ratpow}
 @closecatbox
 @end deffn
@@ -175,7 +181,9 @@ returned coefficients are in CRE form except for numbers.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Rational expressions  @subentry  ratp_dense_coeffs
 @category{Rational expressions}
+@ctindex  Package ratpow  @subentry  ratp_dense_coeffs
 @category{Package ratpow}
 @closecatbox
 @end deffn
