--- a/doc/info/romberg.texi
+++ b/doc/info/romberg.texi
@@ -149,7 +149,9 @@ A 2-dimensional integration, implemented by nested calls to @code{romberg}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package romberg  @subentry  romberg
 @category{Package romberg}
+@ctindex  Numerical methods  @subentry  romberg
 @category{Numerical methods}
 @closecatbox
 
@@ -170,6 +172,7 @@ only the relative error test has any effect on @code{romberg}.
 See also @mref{rombergit} and @mref{rombergmin}.
 
 @opencatbox{Categories:}
+@ctindex  Package romberg  @subentry  rombergabs
 @category{Package romberg}
 @closecatbox
 
@@ -187,6 +190,7 @@ this is a heuristic intended to prevent spurious termination when the integrand 
 See also @mref{rombergabs} and @mref{rombergtol}.
 
 @opencatbox{Categories:}
+@ctindex  Package romberg  @subentry  rombergit
 @category{Package romberg}
 @closecatbox
 
@@ -202,6 +206,7 @@ this is a heuristic intended to prevent spurious termination when the integrand 
 See also @mref{rombergit}, @mref{rombergabs}, and @mref{rombergtol}.
 
 @opencatbox{Categories:}
+@ctindex  Package romberg  @subentry  rombergmin
 @category{Package romberg}
 @closecatbox
 
@@ -222,6 +227,7 @@ only the relative error test has any effect on @code{romberg}.
 See also @mref{rombergit} and @mref{rombergmin}.
 
 @opencatbox{Categories:}
+@ctindex  Package romberg  @subentry  rombergtol
 @category{Package romberg}
 @closecatbox
 
