--- a/doc/info/solve_rec.texi
+++ b/doc/info/solve_rec.texi
@@ -26,8 +26,11 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Linear recurrences  @subentry  Introduction to solve_rec
 @category{Linear recurrences}
+@ctindex  Share packages  @subentry  Introduction to solve_rec
 @category{Share packages}
+@ctindex  Package solve_rec  @subentry  Introduction to solve_rec
 @category{Package solve_rec}
 @closecatbox
 
@@ -93,6 +96,7 @@ So the general solution is
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package solve_rec  @subentry  reduce_order
 @category{Package solve_rec}
 @closecatbox
 
@@ -108,6 +112,7 @@ simplify products in result.
 See also: @mrefdot{solve_rec}
 
 @opencatbox{Categories:}
+@ctindex  Package solve_rec  @subentry  simplify_products
 @category{Package solve_rec}
 @closecatbox
 
@@ -149,8 +154,11 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package solve_rec  @subentry  simplify_sum
 @category{Package solve_rec}
+@ctindex  Sums and products  @subentry  simplify_sum
 @category{Sums and products}
+@ctindex  Simplification functions  @subentry  simplify_sum
 @category{Simplification functions}
 @closecatbox
 
@@ -237,6 +245,7 @@ Example of Ricatti type recurrence:
 See also: @mrefcomma{solve_rec_rat} @mref{simplify_products} and @mrefdot{product_use_gamma}
 
 @opencatbox{Categories:}
+@ctindex  Package solve_rec  @subentry  solve_rec
 @category{Package solve_rec}
 @closecatbox
 
@@ -274,6 +283,7 @@ Example:
 See also: @mrefdot{solve_rec}
 
 @opencatbox{Categories:}
+@ctindex  Package solve_rec  @subentry  solve_rec_rat
 @category{Package solve_rec}
 @closecatbox
 
@@ -289,6 +299,7 @@ into the expression if @code{product_use_gamma} is @code{true}.
 See also: @mrefcomma{simplify_products} @mrefdot{solve_rec}
 
 @opencatbox{Categories:}
+@ctindex  Package solve_rec  @subentry  product_use_gamma
 @category{Package solve_rec}
 @closecatbox
 
@@ -346,6 +357,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package solve_rec  @subentry  summand_to_rec
 @category{Package solve_rec}
 @closecatbox
 
