--- a/doc/info/stirling.texi
+++ b/doc/info/stirling.texi
@@ -67,8 +67,11 @@ was not applied to these two terms.
 To use this function write first @code{load("stirling")}.
 
 @opencatbox{Categories:}
+@ctindex  Gamma and factorial functions  @subentry  stirling
 @category{Gamma and factorial functions}
+@ctindex  Share packages  @subentry  stirling
 @category{Share packages}
+@ctindex  Package stirling  @subentry  stirling
 @category{Package stirling}
 @closecatbox
 
