--- a/doc/info/wrstcse.texi
+++ b/doc/info/wrstcse.texi
@@ -23,7 +23,9 @@ will make both parameters tolerate in the same way.
 @code{load ("wrstcse")} loads this package.
 
 @opencatbox{Categories:}
+@ctindex  Share packages  @subentry  Introduction to wrstcse
 @category{Share packages}
+@ctindex  Package wrstcse  @subentry  Introduction to wrstcse
 @category{Package wrstcse}
 @closecatbox
 
