--- a/doc/info/Affine.texi
+++ b/doc/info/Affine.texi
@@ -10,9 +10,13 @@
 @code{affine} is a package to work with groups of polynomials.
 
 @opencatbox{Categories:}
+@ctindex  Polynomials  @subentry  Introduction to Affine
 @category{Polynomials}
+@ctindex  Groebner bases  @subentry  Introduction to Affine
 @category{Groebner bases}
+@ctindex  Share packages  @subentry  Introduction to Affine
 @category{Share packages}
+@ctindex  Package affine  @subentry  Introduction to Affine
 @category{Package affine}
 @closecatbox
 
@@ -37,6 +41,7 @@ are sparse.
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  fast_linsolve
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -61,6 +66,7 @@ if and only if @var{f} is a polynomial combination of the elements of
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  grobner_basis
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -89,6 +95,7 @@ the weights of individual variables.
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  set_up_dot_simplifications
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -101,6 +108,7 @@ These are the weights used in computing @code{nc_degree}.
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  declare_weights
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -112,6 +120,7 @@ Returns the degree of a noncommutative polynomial @var{p}.  See @code{declare_we
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  nc_degree
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -125,6 +134,7 @@ if and only if @var{f} is a polynomial combination of the elements of the equati
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  dotsimp
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -144,6 +154,7 @@ fast_central_elements ([x, y], 2);
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  fast_central_elements
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -163,6 +174,7 @@ about resetting things.
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  check_overlaps
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -176,6 +188,7 @@ in the variables @var{x_1}, @dots{}, @var{x_n}.
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  mono
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -187,6 +200,7 @@ Compute the Hilbert series through degree @var{n} for the current algebra.
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  monomial_dimensions
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -202,6 +216,7 @@ monomials.
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  extract_linear_equations
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -217,6 +232,7 @@ or a list of polynomials @var{p_1}, @dots{}, @var{p_n}.
 @code{load("affine")} loads this function.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  list_nc_monomials
 @category{Package affine}
 @closecatbox
 @end deffn
@@ -271,6 +287,7 @@ before calling @code{dotsimp}.
 By default, denominators are not collected by @code{dotsimp}.
 
 @opencatbox{Categories:}
+@ctindex  Package affine  @subentry  all_dotsimp_denoms
 @category{Package affine}
 @closecatbox
 
