--- a/doc/info/Bugs.texi
+++ b/doc/info/Bugs.texi
@@ -56,6 +56,7 @@ and then defines functions and variables appropriate to the test.
 @code{run_testsuite} returns @code{done}.
 
 @opencatbox{Categories:}
+@ctindex  Debugging  @subentry  run_testsuite
 @category{Debugging}
 @closecatbox
 @end deffn
@@ -81,7 +82,9 @@ This specifies the testsuite consists of the files "rtest13s" and
 and 63.
 
 @opencatbox{Categories:}
+@ctindex  Debugging  @subentry  testsuite_files
 @category{Debugging}
+@ctindex  Global variables  @subentry  testsuite_files
 @category{Global variables}
 @closecatbox
 @end defvr
@@ -93,7 +96,9 @@ directory that is run as a part of the test suite by
 @mrefdot{run_testsuite}.
 
 @opencatbox{Categories:}
+@ctindex  Debugging  @subentry  share_testsuite_files
 @category{Debugging}
+@ctindex  Global variables  @subentry  share_testsuite_files
 @category{Global variables}
 @closecatbox
 @end defvr
@@ -113,6 +118,7 @@ and Lisp version information into the bug report.
 @code{bug_report} returns an empty string @code{""}.
 
 @opencatbox{Categories:}
+@ctindex  Debugging  @subentry  bug_report
 @category{Debugging}
 @closecatbox
 @end deffn
@@ -210,6 +216,7 @@ by setting the variables @code{maxima_frontend} and
 @code{maxima_frontend_version} accordingly.
 
 @opencatbox{Categories:}
+@ctindex  Debugging  @subentry  build_info
 @category{Debugging}
 @closecatbox
 @end deffn
