--- a/doc/info/Plotting.texi
+++ b/doc/info/Plotting.texi
@@ -60,6 +60,7 @@ type @code{?? opt} in order to choose the information for either of
 those two packages.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  Introduction to Plotting
 @category{Plotting}
 @closecatbox
 
@@ -144,6 +145,7 @@ format, the geomview program must be installed.
 @end itemize
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  Plotting Formats
 @category{Plotting}
 @closecatbox
 
@@ -170,6 +172,7 @@ you may change the value of this variable. For instance,
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  geomview_command
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -206,6 +209,7 @@ variable. For instance,
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_command
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -224,6 +228,7 @@ changed in order to add options for the gnuplot program, adding those
 options before the format directive "~s".
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_file_args
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -264,6 +269,7 @@ versions are used in Windows, it might be necessary to adjust the value
 of @code{gnuplot_view_args}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_view_args
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -315,7 +321,9 @@ corresponding the maximum 36 iterations would not be black.
 @end ifnotinfo
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  julia
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  julia
 @category{Plotting}
 @closecatbox
 
@@ -337,6 +345,7 @@ plotted.  There are two transformations defined by default:
 for those two transformations.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  make_transform
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -383,7 +392,9 @@ Example:
 @end ifnotinfo
 
 @opencatbox{Categories:}
+@ctindex  Package dynamics  @subentry  mandelbrot
 @category{Package dynamics}
+@ctindex  Plotting  @subentry  mandelbrot
 @category{Plotting}
 @closecatbox
 
@@ -399,6 +410,7 @@ plot3d as the distance from the z axis and the azimuthal angle (polar
 coordinates), and transform them into x and y coordinates.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  polar_to_xy
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -728,6 +740,7 @@ A plot of discrete data points together with a continuous function:
 See also the section about Plotting Options.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  plot2d
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -951,6 +964,7 @@ in which each color represents a different level.
 See also @mrefdot{Plotting Options}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  plot3d
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -965,6 +979,7 @@ values or remove options, use @mrefcomma{set_plot_option}
 @mref{get_plot_option} and @mrefdot{remove_plot_option}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  plot_options
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -979,6 +994,7 @@ See also @mrefcomma{set_plot_option} @mref{get_plot_option} and
 @mref{Plotting Options}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  remove_plot_option
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -1017,6 +1033,7 @@ red, brown, black]], [gnuplot_preamble, ], [gnuplot_term, default]]
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  set_plot_option
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -1033,6 +1050,7 @@ projection with the x axis and finally the distance from the origin) and
 transform them into x, y and z coordinates.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  spherical_to_xyz
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -1074,6 +1092,7 @@ points can be created and then plotted using the @code{discrete} method
 of @code{plot2d}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1095,6 +1114,7 @@ The single keywords @code{axes} and @code{noaxes} can be used as
 synonyms for @code{[axes, true]} and @code{[axes, false]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  axes @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1115,6 +1135,7 @@ the value for the azimuth, in degrees.
 See also @mrefdot{elevation}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1131,6 +1152,7 @@ The single keywords @code{box} and @code{nobox} can be used as
 synonyms for @code{[box, true]} and @code{[box, false]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], box, nobox
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1153,6 +1175,7 @@ the blue component. If the name of a given color is unknown color, black
 will be used instead.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1172,6 +1195,7 @@ The single keywords @code{color_bar} and @code{nocolor_bar} can be used
 as synonyms for @code{[color_bar, true]} and @code{[color_bar, false]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], color_bar, @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1192,6 +1216,7 @@ the values of the tics and @code{nocolor_bar_tics} will not show any
 tics on the color bar.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  , @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1212,6 +1237,7 @@ the value for the elevation, in degrees.
 See also @mrefdot{azimuth}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1228,6 +1254,7 @@ programs.
 For a way to actually draw a grid See @mrefdot{grid2d}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1247,6 +1274,7 @@ used as synonyms for @code{[grid2d, true]} and @code{[grid2d, false]}.
 See also @mrefdot{grid}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], grid2d, nogrid2d
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1260,6 +1288,7 @@ Default value: @code{9}
 Number of iterations made by the programs mandelbrot and julia.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1272,6 +1301,7 @@ Writes one or several labels in the points with @var{x}, @var{y}
 coordinates indicated after each label.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1291,6 +1321,7 @@ leaving it to the plotting program to set up a legend. The keyword
 @code{nolegend} is a synonym for @code{[legend, false]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  , @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1313,6 +1344,7 @@ If more than one number are given after the keyword @code{levels},
 values of the expression plotted, if they exist within the domain used.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ] 
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1328,6 +1360,7 @@ true or false. The single keywords @code{logx} and @code{nologx} can be
 used as synonyms for @code{[logx, true]} and @code{[logx, false]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], logx, nologx
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1344,6 +1377,7 @@ The single keywords @code{logy} and @code{nology} can be used as
 synonyms for @code{[logy, true]} and @code{[logy, false]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], logy, nology
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1365,6 +1399,7 @@ to use. The keyword @code{no_mesh_lines} is a synonym for
 @code{[mesh_lines_color, false]}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1381,6 +1416,7 @@ functions. When plotting parametric functions with @mrefcomma{plot3d}
 it sets the number of points that will be shown for the plot.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1419,6 +1455,7 @@ defined, leaving it to the graphic program to decide the palette to use
 and @code{nopalette} is a synonym for @code{[palette, false]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  palette @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1441,6 +1478,7 @@ the value of @code{plotepsilon}, it will be assumed to be zero, and
 therefore, as being part of the curve to be plotted.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1459,6 +1497,7 @@ It sets the format to be used for plotting as explained in
 @mrefdot{Plotting Formats}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1483,6 +1522,7 @@ as a synonym for @code{[plot_realpart, true]} and @code{noplot_realpart}
 is a synonym for @code{[plot_realpart, false]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1502,6 +1542,7 @@ The possible objects that can be used are: @code{bullet}, @code{circle},
 @code{lozenge}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  , @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1523,6 +1564,7 @@ will be used with solid colored lines of width 3, plot
 size of 17.2 cm by 12.9 cm and font of 18 points.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1543,6 +1585,7 @@ Gnuplot's PNG terminal; otherwise, Gnuplot's pngcairo terminal
 will be used, with a font of size 12. 
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1564,6 +1607,7 @@ will be used with the EPS option, solid colored lines of width 2, plot
 size of 16.4 cm by 12.3 cm and font of 24 points.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1599,6 +1643,7 @@ are synonyms for @code{[run_viewer, true]} and @code{[run_viewer,
 false]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], run_viewer, @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1613,6 +1658,7 @@ axes will be the same, in either 2d or 3d plots. See also
 @code{[same_xy, true]} and @code{[same_xy, false]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], same_xy, nosame_xy
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1626,6 +1672,7 @@ of a 3d plot will be the same. @code{same_xyz} and @code{nosame_xyz} are
 synonyms for @code{[same_xyz, true]} and @code{[same_xyz, false]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], same_xyz, nosame_xyz
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1649,6 +1696,7 @@ those points to be at the border of the intervals, rather than
 increasing @var{nx} and @var{ny}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1692,6 +1740,7 @@ radius, color and type of object to replace the points.
 See also @mref{color} and @mrefdot{point_type}
  
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  style @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1712,6 +1761,7 @@ Gnuplot's SVG terminal; otherwise, Gnuplot's svg terminal
 will be used with font of 14 points.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1723,6 +1773,7 @@ will be used with font of 14 points.
 Default range for parametric plots.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1734,6 +1785,7 @@ Default range for parametric plots.
 Defines a title that will be written at the top of the plot.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1752,6 +1804,7 @@ See @mrefcomma{make_transform} @mref{polar_to_xy} and
 @mrefdot{spherical_to_xyz}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], notransform_xy
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1765,6 +1818,7 @@ Opens the plot in window number @var{n}, instead of the default window
 will be replaced by the current plot.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1781,6 +1835,7 @@ option (or after the second option in plot3d) to define the effective
 horizontal domain that will be shown in the plot.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1796,6 +1851,7 @@ first variable, when plotting surfaces with @mref{plot3d}, or the first
 expression in the case of a parametric plot.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1818,6 +1874,7 @@ defined, leaving it to the graphic program to decide the values to use
 and @code{noxtics} is a synonym for @code{[xtics, false]}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1836,6 +1893,7 @@ plot, it is better to use option @mrefdot{yx_ratio} For instance,
 @code{[yx_ratio, 10]} instead of @code{[xy_scale, 0.1, 1]}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1850,6 +1908,7 @@ it defines the effective domain of the second variable that will be
 shown in the plot.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1865,6 +1924,7 @@ plotting surfaces with @mref{plot3d}, or the second expression in the
 case of a parametric plot.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1887,6 +1947,7 @@ defined, leaving it to the graphic program to decide the values to use
 and @code{noytics} is a synonym for @code{[ytics, false]}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1899,6 +1960,7 @@ In a 2d plot, the ratio between the vertical and the horizontal sides of
 the rectangle used to make the plot. See also @mrefdot{same_xy}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1911,6 +1973,7 @@ Used in @mref{plot3d} to set the effective range of values of z that will be
 shown in the plot.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1926,6 +1989,7 @@ plot.  It can not be used with @mref{set_plot_option} and it will be
 ignored by @mrefdot{plot2d}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1940,6 +2004,7 @@ The single keyword @code{zmin} removes any value previously
 defined, leaving it to the graphic program to decide the value to use.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], zmin
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -1962,6 +2027,7 @@ defined, leaving it to the graphic program to decide the values to use
 and @code{noztics} is a synonym for @code{[ztics, false]}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ], @
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2029,6 +2095,7 @@ name.
 @end itemize
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2054,6 +2121,7 @@ options @mrefcomma{png_file} @mrefcomma{pdf_file} @mrefcomma{ps_file}
 or @mrefdot{svg_file}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2106,6 +2174,7 @@ above included a directory path, the file would have been saved in that
 directory rather than in the temporary directory.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2118,6 +2187,7 @@ With a value of @code{false}, it can be used to disable the use of PM3D
 mode, which is enabled by default.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2131,6 +2201,7 @@ Gnuplot. Any valid gnuplot commands may be used. Multiple commands should
 be separated with a semi-colon. See also @mrefdot{gnuplot_postamble}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2145,6 +2216,7 @@ commands may be used. Multiple commands should be separated with a
 semi-colon. See also @mrefdot{gnuplot_preamble}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2158,6 +2230,7 @@ The gnuplot command to set the terminal type for the default
 terminal. It this option is not set, the command used will be: @code{"set term wxt size 640,480 font \",12\"; set term pop"}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_default_term_command
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2172,6 +2245,7 @@ this option is not set, the command used will be: @code{"set term dumb
 79 22"}, which makes the text output 79 characters by 22 characters.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_dumb_term_command
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2184,6 +2258,7 @@ The gnuplot command to set the terminal type for the PDF
 terminal.  If this option is not set, the command used will be: @code{"set term pdfcairo color solid lw 3 size 17.2 cm, 12.9 cm font \",18\""}. See the gnuplot documentation for more information.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2198,6 +2273,7 @@ this option is not set, the command used will be:
 for more information.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2211,6 +2287,7 @@ terminal.  If this option is not set, the command used will be: @code{"set term 
 more information.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2228,6 +2305,7 @@ in Gnuplot. The default value for this option is @code{false}, which will
 not treat any characters as formatting characters.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2242,6 +2320,7 @@ terminal.  If this option is not set, the command used will be:
 more information.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  ]
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2254,6 +2333,7 @@ This is an obsolete option that has been replaced by @mref{legend} described
 above.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_curve_titles
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2265,6 +2345,7 @@ above.
 This is an obsolete option that has been replaced by @mrefdot{style}
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_curve_styles
 @category{Plotting}
 @closecatbox
 @end defvr
@@ -2282,6 +2363,7 @@ Opens the pipe to gnuplot used for plotting with the @code{gnuplot_pipes}
 format.  Is not necessary to manually open the pipe before plotting.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_start
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -2293,6 +2375,7 @@ format.  Is not necessary to manually open the pipe before plotting.
 Closes the pipe to gnuplot which is used with the @code{gnuplot_pipes} format.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_close
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -2306,6 +2389,7 @@ opened, it will be opened before sending the command. @var{s} must be a
 string.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_send
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -2318,6 +2402,7 @@ Closes the pipe to gnuplot which is used with the @code{gnuplot_pipes}
 format and opens a new pipe.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_restart
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -2333,6 +2418,7 @@ gnuplot command in a string @var{s}, then @code{s} is sent to gnuplot
 before reploting the window.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_replot
 @category{Plotting}
 @closecatbox
 @end deffn
@@ -2345,6 +2431,7 @@ Resets the state of gnuplot used with the @code{gnuplot_pipes} format.  To
 update the gnuplot window call @mref{gnuplot_replot} after @code{gnuplot_reset}.
 
 @opencatbox{Categories:}
+@ctindex  Plotting  @subentry  gnuplot_reset
 @category{Plotting}
 @closecatbox
 @end deffn
