--- a/doc/info/Rules.texi
+++ b/doc/info/Rules.texi
@@ -26,7 +26,9 @@ There are additional mechanisms for rules applied to polynomials by
 package.
 
 @opencatbox{Categories:}
+@ctindex  Simplification  @subentry  Introduction to Rules and Patterns
 @category{Simplification}
+@ctindex  Rules and patterns  @subentry  Introduction to Rules and Patterns
 @category{Rules and patterns}
 @closecatbox
 
@@ -57,6 +59,7 @@ subexpression, the result is returned.
 See also @mrefcomma{applyb1} @mref{apply2} and @mrefdot{let}
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  apply1
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -79,6 +82,7 @@ subexpression is reprocessed, starting with the first rule.
 See also @mref{apply1} and @mrefdot{let}
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  apply2
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -105,6 +109,7 @@ before giving up.
 See also @mrefcomma{apply1} @mref{apply2} and @mrefdot{let}
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  applyb1
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -125,6 +130,7 @@ the rule package @code{rule_pkg_name} is used for that function call only,
 and the value of @code{current_let_rule_package} is not changed.
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  current_let_rule_package
 @category{Rules and patterns}
 @closecatbox
 @end defvr
@@ -141,6 +147,7 @@ is not explicitly set by the user with @code{let} or by changing the value of
 @code{current_let_rule_package}.
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  default_let_rule_package
 @category{Rules and patterns}
 @closecatbox
 @end defvr
@@ -321,6 +328,7 @@ to see if it is a definite integral.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  defmatch
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -344,6 +352,7 @@ operation of the pattern match and replacement.
 If the match fails, the rule function returns @code{false}.
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  defrule
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -409,7 +418,9 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  disprule
 @category{Rules and patterns}
+@ctindex  Display functions  @subentry  disprule
 @category{Display functions}
 @closecatbox
 @end deffn
@@ -503,6 +514,7 @@ named by @code{current_let_rule_package} is used.  If a call such as
 
 @c NEEDS ADDITIONAL EXAMPLES
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  let
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -536,6 +548,7 @@ the numerator, denominator, and their quotient are simplified in that order.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  letrat
 @category{Rules and patterns}
 @closecatbox
 @end defvr
@@ -561,6 +574,7 @@ See also @mrefcomma{disprule} which displays rules defined by @mref{tellsimp} an
 @c WHAT ABOUT defmatch AND defrule ??
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  letrules
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -634,6 +648,7 @@ For other ways to do substitutions see also @mrefcomma{subst}
 @end group
 @end example
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  letsimp
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -647,6 +662,7 @@ Default value: @code{[default_let_rule_package]}
 plus the default package @code{default_let_rule_package}.
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  let_rule_packages
 @category{Rules and patterns}
 @closecatbox
 @end defvr
@@ -910,7 +926,9 @@ match variables.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  matchdeclare
 @category{Rules and patterns}
+@ctindex  Declarations and inferences  @subentry  matchdeclare
 @category{Declarations and inferences}
 @closecatbox
 @end deffn
@@ -926,6 +944,7 @@ Default value: 10000
 and @code{apply2} will delve.
 
 @opencatbox{Categories:}
+@ctindex  Function application  @subentry  maxapplydepth
 @category{Function application}
 @closecatbox
 @end defvr
@@ -941,6 +960,7 @@ Default value: 10000
 will reach before giving up.
 
 @opencatbox{Categories:}
+@ctindex  Function application  @subentry  maxapplyheight
 @category{Function application}
 @closecatbox
 @end defvr
@@ -973,6 +993,7 @@ See also @mrefcomma{remrule} which removes a rule defined by @mref{tellsimp} or
 @mrefdot{tellsimpafter}
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  remlet
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -1070,6 +1091,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  remrule
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -1142,6 +1164,7 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  tellsimp
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -1491,6 +1514,7 @@ A worked example: anticommutative multiplication.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  tellsimpafter
 @category{Rules and patterns}
 @closecatbox
 @end deffn
@@ -1503,6 +1527,7 @@ Executes @code{kill (rules)} and then resets the next rule number to 1
 for addition @code{+}, multiplication @code{*}, and exponentiation @code{^}.
 
 @opencatbox{Categories:}
+@ctindex  Rules and patterns  @subentry  clear_rules
 @category{Rules and patterns}
 @closecatbox
 @end deffn
