--- a/doc/info/alt-display.texi
+++ b/doc/info/alt-display.texi
@@ -143,6 +143,7 @@ PROMPT;>>(%i5) <<PROMPT;
 @end verbatim
 
 @opencatbox{Categories:}
+@ctindex  Package alt-display  @subentry  alt_display_output_type
 @category{Package alt-display}
 @closecatbox
 
@@ -192,6 +193,7 @@ both bound to @code{false} in the body of @code{time_stamp} to prevent
 an infinite recursion in @code{displa}.
 
 @opencatbox{Categories:}
+@ctindex  Package alt-display  @subentry  define_alt_display
 @category{Package alt-display}
 @closecatbox
 
@@ -214,6 +216,7 @@ an alternative 1-d or 2-d display function.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package alt-display  @subentry  info_display
 @category{Package alt-display}
 @closecatbox
 
@@ -233,6 +236,7 @@ Produces MathML output.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package alt-display  @subentry  mathml_display
 @category{Package alt-display}
 @closecatbox
 
@@ -250,6 +254,7 @@ Produces TeX output.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package alt-display  @subentry  tex_display
 @category{Package alt-display}
 @closecatbox
 
@@ -287,6 +292,7 @@ Produces Texinfo output using all three display functions.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package alt-display  @subentry  multi_display_for_texinfo
 @category{Package alt-display}
 @closecatbox
 
@@ -298,6 +304,7 @@ Resets the prompt prefix and suffix to the empty string, and sets both
 1-d and 2-d display functions to the default.
 
 @opencatbox{Categories:}
+@ctindex  Package alt-display  @subentry  reset_displays
 @category{Package alt-display}
 @closecatbox
 
@@ -326,6 +333,7 @@ its output. A display function that returns a string will appear to
 display nothing, nor cause any errors.
 
 @opencatbox{Categories:}
+@ctindex  Package alt-display  @subentry  set_alt_display
 @category{Package alt-display}
 @closecatbox
 
@@ -406,6 +414,7 @@ by an open square bracket (91); each string ends with a lower-case m
 information on how to use control strings to set the terminal colors.
 
 @opencatbox{Categories:}
+@ctindex  Package alt-display  @subentry  set_prompt
 @category{Package alt-display}
 @closecatbox
 
