--- a/doc/info/errormessages.texi
+++ b/doc/info/errormessages.texi
@@ -31,6 +31,7 @@ One common cause for this error message is that square brackets operator
 (@code{[ ]}) was used trying to access a list element that whose element
 number was @code{< 1} or @code{> length(list)}.
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  No such list element
 @category{Error messages}
 @closecatbox
 
@@ -73,6 +74,7 @@ single-element list first:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  argument must be a non-atomic expression
 @category{Error messages}
 @closecatbox
 
@@ -82,6 +84,7 @@ single-element list first:
 Maxima supports several assignment operators. When trying to define a function
 @code{:=} has to be used.
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  cannot assign to function
 @category{Error messages}
 @closecatbox
 
@@ -90,6 +93,7 @@ Maxima supports several assignment operators. When trying to define a function
 @subsection expt: undefined:  0 to a negative exponent.
 This message notifies about a classical division by zero error.
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  0 to a negative exponent
 @category{Error messages}
 @closecatbox
 
@@ -99,6 +103,7 @@ This message notifies about a classical division by zero error.
 This might be caused by a command starting with a comma (@code{,}) or by one comma
 being directly followed by another one..
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  Comma is not a prefix operator
 @category{Error messages}
 @closecatbox
 
@@ -108,6 +113,7 @@ being directly followed by another one..
 Common reasons for this error appearing are a closing parenthesis without an
 opening one or a closing parenthesis directly preceded by a comma.
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  Illegal use of delimiter
 @category{Error messages}
 @closecatbox
 
@@ -134,6 +140,7 @@ typing:
 If this directory is missing maxima will recreate it again as soon as it has to
 compile a package.
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  loadfile failed to load
 @category{Error messages}
 @closecatbox
 
@@ -145,6 +152,7 @@ be stepped. This time instead of the name of a still-undefined variable maxima h
 something else, possibly a list or the name of a list.
 
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  makelist second argument must evaluate to a number
 @category{Error messages}
 @closecatbox
 
@@ -155,6 +163,7 @@ The most probable cause for this error is that there was an attempt to either
 use a number or a variable whose numerical value is known as a loop
 counter.
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  Only symbols can be bound
 @category{Error messages}
 @closecatbox
 
@@ -197,6 +206,7 @@ single-element list first:
 
 
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  Operators of arguments must all be the same
 @category{Error messages}
 @closecatbox
 
@@ -222,6 +232,7 @@ approaches might be useful:
       2GB of physical memory.
 @end itemize
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  out of memory
 @category{Error messages}
 @closecatbox
 
@@ -231,6 +242,7 @@ approaches might be useful:
 @code{part()} was used to access the @code{n}th item in something that has less than
 @code{n} items.
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  part fell off the end
 @category{Error messages}
 @closecatbox
 
@@ -268,6 +280,7 @@ draw2d (explicit): non defined variable
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  undefined variable during plotting
 @category{Error messages}
 @closecatbox
 
@@ -291,6 +304,7 @@ if the following maxima command is entered:
 Note: The @code{scene()} command requrires VTK with TCL/TK bindings.
 
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  VTK is not installed
 @category{Error messages}
 @closecatbox
 
@@ -311,6 +325,7 @@ If @code{x} isn't meant as a variable name but just a named option to a
 command prepending the named option by a single quote (@code{'}) should
 resolve this issue.
 @opencatbox{Categories:}
+@ctindex  Error messages  @subentry  undefined variable during translation
 @category{Error messages}
 @closecatbox
 
@@ -329,5 +344,6 @@ fractions.
 See also @code{ratprint}, @code{ratepsilon}, @code{bftorat}, @code{fpprintprec}
 and @code{rationalize}.
 @opencatbox{Categories:}
+@ctindex  Warning messages  @subentry  replaced x by y
 @category{Warning messages}
 @closecatbox
