--- a/doc/info/grobner.texi
+++ b/doc/info/grobner.texi
@@ -60,8 +60,11 @@ January 20, 1999
 @end smallformat
 
 @opencatbox{Categories:}
+@ctindex  Groebner bases  @subentry  Introduction to grobner
 @category{Groebner bases}
+@ctindex  Share packages  @subentry  Introduction to grobner
 @category{Share packages}
+@ctindex  Package grobner  @subentry  Introduction to grobner
 @category{Package grobner}
 @closecatbox
 
@@ -97,6 +100,7 @@ Default value: @code{lex}
 This global switch controls which monomial order is used in polynomial and Groebner Bases calculations. If not set, @code{lex} will be used.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_monomial_order
 @category{Package grobner}
 @closecatbox
 
@@ -112,6 +116,7 @@ expression ring will be used. This variable may be set to
 @code{ring_of_integers} if desired.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_coefficient_ring
 @category{Package grobner}
 @closecatbox
 
@@ -124,6 +129,7 @@ Name of the default order for eliminated variables in
 elimination-based functions. If not set, @code{lex} will be used.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_primary_elimination_order
 @category{Package grobner}
 @closecatbox
 
@@ -135,6 +141,7 @@ Default value: @code{false}
 Name of the default order for kept variables in elimination-based functions. If not set, @code{lex} will be used.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_secondary_elimination_order
 @category{Package grobner}
 @closecatbox
 
@@ -150,6 +157,7 @@ The user must ensure that this is a true elimination order valid
 for the number of eliminated variables. 
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_elimination_order
 @category{Package grobner}
 @closecatbox
 
@@ -163,6 +171,7 @@ polynomial as a list of terms in the current monomial order rather
 than a @emph{maxima} general expression.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_return_term_list
 @category{Package grobner}
 @closecatbox
 
@@ -174,6 +183,7 @@ Default value: @code{false}
 If set to @code{true}, produce debugging and tracing output.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_grobner_debug
 @category{Package grobner}
 @closecatbox
 
@@ -192,6 +202,7 @@ Possible values:
 The name of the algorithm used to find the Groebner Bases.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_grobner_algorithm
 @category{Package grobner}
 @closecatbox
 
@@ -205,6 +216,7 @@ reduction means that division algorithm stops after the first
 reduction.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_top_reduction_only
 @category{Package grobner}
 @closecatbox
 
@@ -227,6 +239,7 @@ Adds two polynomials @var{poly1} and @var{poly2}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_add
 @category{Package grobner}
 @closecatbox
 
@@ -243,6 +256,7 @@ Subtracts a polynomial @var{poly2} from @var{poly1}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_subtract
 @category{Package grobner}
 @closecatbox
 
@@ -258,6 +272,7 @@ Returns the product of polynomials @var{poly1} and @var{poly2}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_multiply
 @category{Package grobner}
 @closecatbox
 
@@ -268,6 +283,7 @@ Returns the product of polynomials @var{poly1} and @var{poly2}.
 Returns the @emph{syzygy polynomial} (@emph{S-polynomial}) of two polynomials @var{poly1} and @var{poly2}.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_s_polynomial
 @category{Package grobner}
 @closecatbox
 
@@ -283,6 +299,7 @@ Returns the polynomial @var{poly} divided by the GCD of its coefficients.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_primitive_part
 @category{Package grobner}
 @closecatbox
 
@@ -295,6 +312,7 @@ It assumes that the division is possible, which may not always be the
 case in rings which are not fields.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_normalize
 @category{Package grobner}
 @closecatbox
 
@@ -335,6 +353,7 @@ indexed and transcendental function variables are allowed.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_expand
 @category{Package grobner}
 @closecatbox
 
@@ -350,6 +369,7 @@ exponentitates @var{poly} by a positive integer @var{number}. If @var{number} is
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_expt
 @category{Package grobner}
 @closecatbox
 
@@ -365,6 +385,7 @@ exponentitates @var{poly} by a positive integer @var{number}. If @var{number} is
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_content
 @category{Package grobner}
 @closecatbox
 
@@ -390,6 +411,7 @@ $$c*poly=\sum_{i=1}^{n}({a}_{i}*{polylist}_{i})+r$$
 @end ifnottex
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_pseudo_divide
 @category{Package grobner}
 @closecatbox
 
@@ -401,6 +423,7 @@ Divide a polynomial @var{poly1} by another polynomial @var{poly2}. Assumes that 
 division with no remainder is possible. Returns the quotient.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_exact_divide
 @category{Package grobner}
 @closecatbox
 
@@ -412,6 +435,7 @@ division with no remainder is possible. Returns the quotient.
 to a set of polynomials @var{polylist}.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_normal_form
 @category{Package grobner}
 @closecatbox
 
@@ -425,6 +449,7 @@ criterion: for every two polynomials @math{h1} and @math{h2} in @var{polylist} t
 S-polynomial @math{S(h1,h2)} reduces to 0 @math{modulo} @var{polylist}.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_buchberger_criterion
 @category{Package grobner}
 @closecatbox
 
@@ -436,6 +461,7 @@ S-polynomial @math{S(h1,h2)} reduces to 0 @math{modulo} @var{polylist}.
 polynomials and returns the resulting Groebner basis.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_buchberger
 @category{Package grobner}
 @closecatbox
 
@@ -486,6 +512,7 @@ The @emph{radical ideal} @math{sqrt(I)} is the ideal
 each polynomial is fully reduced with respect to the other polynomials.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_reduction
 @category{Package grobner}
 @closecatbox
 
@@ -499,6 +526,7 @@ of a polynomial in the sublist divides the leading monomial
 of another polynomial.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_minimization
 @category{Package grobner}
 @closecatbox
 
@@ -511,6 +539,7 @@ of another polynomial.
 That means it divides every polynomial in a list @var{polylist} by its leading coefficient.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_normalize_list
 @category{Package grobner}
 @closecatbox
 
@@ -521,6 +550,7 @@ That means it divides every polynomial in a list @var{polylist} by its leading c
 Returns a Groebner basis of the ideal span by the polynomials @var{polylist}. Affected by the global flags.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_grobner
 @category{Package grobner}
 @closecatbox
 
@@ -531,6 +561,7 @@ Returns a Groebner basis of the ideal span by the polynomials @var{polylist}. Af
 Returns a reduced Groebner basis of the ideal span by the polynomials @var{polylist}. Affected by the global flags.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_reduced_grobner
 @category{Package grobner}
 @closecatbox
 
@@ -542,7 +573,9 @@ Returns a reduced Groebner basis of the ideal span by the polynomials @var{polyl
 @code{poly_depends} tests whether a polynomial depends on a variable @var{var}.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_depends_p
 @category{Package grobner}
+@ctindex  Predicate functions  @subentry  poly_depends_p
 @category{Predicate functions}
 @closecatbox
 
@@ -557,6 +590,7 @@ Returns a reduced Groebner basis of the ideal span by the polynomials @var{polyl
 ideal specified as a list of generating polynomials (not necessarily Groebner basis).
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_elimination_ideal
 @category{Package grobner}
 @closecatbox
 
@@ -573,6 +607,7 @@ Returns the reduced Groebner basis of the colon ideal
 where @math{polylist1} and @math{polylist2} are two lists of polynomials.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_colon_ideal
 @category{Package grobner}
 @closecatbox
 
@@ -584,6 +619,7 @@ where @math{polylist1} and @math{polylist2} are two lists of polynomials.
 @code{poly_ideal_intersection} returns the intersection of two ideals.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_ideal_intersection
 @category{Package grobner}
 @closecatbox
 
@@ -595,6 +631,7 @@ where @math{polylist1} and @math{polylist2} are two lists of polynomials.
 Returns the lowest common multiple of @var{poly1} and @var{poly2}.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_lcm
 @category{Package grobner}
 @closecatbox
 
@@ -624,6 +661,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_gcd
 @category{Package grobner}
 @closecatbox
 @end deffn
@@ -643,6 +681,7 @@ first list is not a Groebner basis, and thus the result is @code{false}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_grobner_equal
 @category{Package grobner}
 @closecatbox
 
@@ -656,7 +695,9 @@ is contained in the ideal generated by @var{polylist2}. For this test to always 
 @var{polylist2} must be a Groebner basis.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_grobner_subsetp
 @category{Package grobner}
+@ctindex  Predicate functions  @subentry  poly_grobner_subsetp
 @category{Predicate functions}
 @closecatbox
 
@@ -672,6 +713,7 @@ polynomial list @var{polylist}, which is assumed to be a Groebner basis. Returns
 which is assumed to be a Groebner basis. Equivalent to @code{normal_form} being 0. 
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_grobner_member
 @category{Package grobner}
 @closecatbox
 
@@ -696,6 +738,7 @@ of polynomials in the ideal generated by @var{polylist} which do not identically
 vanish on the variety of @var{poly}.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_ideal_saturation1
 @category{Package grobner}
 @closecatbox
 
@@ -720,6 +763,7 @@ the ideal generated by @var{polylist1} which do not identically vanish on the
 variety of @var{polylist2}.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_ideal_saturation
 @category{Package grobner}
 @closecatbox
 
@@ -746,6 +790,7 @@ of the polynomial list @var{polylist2} of the ideal generated by the
 polynomial list @var{polylist1}.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_ideal_polysaturation1
 @category{Package grobner}
 @closecatbox
 
@@ -766,6 +811,7 @@ I(polylist):I(polylist_1)^inf:...:I(polylist_n)^inf
 @end ifnottex
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_ideal_polysaturation
 @category{Package grobner}
 @closecatbox
 
@@ -777,6 +823,7 @@ I(polylist):I(polylist_1)^inf:...:I(polylist_n)^inf
 @code{poly_saturation_extension} implements the famous Rabinowitz trick.
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_saturation_extension
 @category{Package grobner}
 @closecatbox
 
@@ -786,6 +833,7 @@ I(polylist):I(polylist_1)^inf:...:I(polylist_n)^inf
 @deffn {Function} poly_polysaturation_extension (@var{poly}, @var{polylist}, @var{varlist1}, @var{varlist2})
 
 @opencatbox{Categories:}
+@ctindex  Package grobner  @subentry  poly_polysaturation_extension
 @category{Package grobner}
 @closecatbox
 
