--- a/doc/info/hompack.texi
+++ b/doc/info/hompack.texi
@@ -10,8 +10,11 @@
 Fortran library HOMPACK, as obtained from Netlib.
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods   @subentry  Introduction to hompack
 @category{Numerical methods} 
+@ctindex  Share packages  @subentry  Introduction to hompack
 @category{Share packages}
+@ctindex  Package hompack  @subentry  Introduction to hompack
 @category{Package hompack}
 @closecatbox
 
