--- a/doc/info/lsquares.texi
+++ b/doc/info/lsquares.texi
@@ -12,8 +12,11 @@
 to estimate parameters for a model from numerical data.
 
 @opencatbox{Categories:}
+@ctindex  Statistical estimation  @subentry  Introduction to lsquares
 @category{Statistical estimation}
+@ctindex  Share packages  @subentry  Introduction to lsquares
 @category{Share packages}
+@ctindex  Package lsquares  @subentry  Introduction to lsquares
 @category{Package lsquares}
 @closecatbox
 
@@ -198,7 +201,9 @@ I NFN FUNC                  GNORM                 STEPLENGTH
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package lsquares  @subentry  lsquares_estimates
 @category{Package lsquares}
+@ctindex  Numerical methods  @subentry  lsquares_estimates
 @category{Numerical methods}
 @closecatbox
 
@@ -269,6 +274,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package lsquares  @subentry  lsquares_estimates_exact
 @category{Package lsquares}
 @closecatbox
 
@@ -353,7 +359,9 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package lsquares  @subentry  lsquares_estimates_approximate
 @category{Package lsquares}
+@ctindex  Numerical methods  @subentry  lsquares_estimates_approximate
 @category{Numerical methods}
 @closecatbox
 
@@ -486,6 +494,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package lsquares  @subentry  lsquares_mse
 @category{Package lsquares}
 @closecatbox
 
@@ -565,6 +574,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package lsquares  @subentry  lsquares_residuals
 @category{Package lsquares}
 @closecatbox
 
@@ -644,6 +654,7 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package lsquares  @subentry  lsquares_residual_mse
 @category{Package lsquares}
 @closecatbox
 
@@ -727,7 +738,9 @@ _Nor = a b - b - a + 1, _Nxor = 2 a b - b - a + 1]
 To use this function write first @code{load("lsquares")}.
 
 @opencatbox{Categories:}
+@ctindex  Package lsquares  @subentry  plsquares
 @category{Package lsquares}
+@ctindex  Numerical methods  @subentry  plsquares
 @category{Numerical methods}
 @closecatbox
 
