--- a/doc/info/simplex.texi
+++ b/doc/info/simplex.texi
@@ -23,9 +23,13 @@ Example:
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Numerical methods   @subentry  Introduction to simplex
 @category{Numerical methods} 
+@ctindex  Optimization  @subentry  Introduction to simplex
 @category{Optimization}
+@ctindex  Share packages  @subentry  Introduction to simplex
 @category{Share packages}
+@ctindex  Package simplex  @subentry  Introduction to simplex
 @category{Package simplex}
 @closecatbox
 
@@ -129,6 +133,7 @@ Warning: Solution may be incorrect.
 See also: @mref{linear_program}, @mref{ratnump}.
 
 @opencatbox{Categories:}
+@ctindex  Package simplex  @subentry  epsilon_lp
 @category{Package simplex}
 @closecatbox
 
@@ -172,7 +177,9 @@ Example:
 See also: @mref{minimize_lp}, @mref{scale_lp}, and @mref{epsilon_lp}.
 
 @opencatbox{Categories:}
+@ctindex  Package simplex  @subentry  linear_program
 @category{Package simplex}
+@ctindex  Numerical methods  @subentry  linear_program
 @category{Numerical methods}
 @closecatbox
 
@@ -189,7 +196,9 @@ description of arguments and return value.
 See also: @mref{minimize_lp}.
 
 @opencatbox{Categories:}
+@ctindex  Package simplex  @subentry  maximize_lp
 @category{Package simplex}
+@ctindex  Numerical methods  @subentry  maximize_lp
 @category{Numerical methods}
 @closecatbox
 
@@ -291,7 +300,9 @@ p;
 See also: @mref{maximize_lp}, @mref{nonnegative_lp}, @mref{epsilon_lp}.
 
 @opencatbox{Categories:}
+@ctindex  Package simplex  @subentry  minimize_lp
 @category{Package simplex}
+@ctindex  Numerical methods  @subentry  minimize_lp
 @category{Numerical methods}
 @closecatbox
 
@@ -309,6 +320,7 @@ If @code{nonnegative_lp} is true all decision variables to
 See also: @mref{minimize_lp}.
 
 @opencatbox{Categories:}
+@ctindex  Package simplex  @subentry  nonnegative_lp
 @category{Package simplex}
 @closecatbox
 
@@ -322,6 +334,7 @@ When @code{scale_lp} is @code{true},
 @code{linear_program} scales its input so that the maximum absolute value in each row or column is 1.
 
 @opencatbox{Categories:}
+@ctindex  Package simplex  @subentry  scale_lp
 @category{Package simplex}
 @closecatbox
 
@@ -334,6 +347,7 @@ After @code{linear_program} returns,
 @code{pivot_count_sx} is the number of pivots in last computation.
 
 @opencatbox{Categories:}
+@ctindex  Package simplex  @subentry  pivot_count_sx
 @category{Package simplex}
 @closecatbox
 
@@ -345,6 +359,7 @@ After @code{linear_program} returns,
 @code{pivot_max_sx} is the maximum number of pivots allowed by @code{linear_program}.
 
 @opencatbox{Categories:}
+@ctindex  Package simplex  @subentry  pivot_max_sx
 @category{Package simplex}
 @closecatbox
 
