--- a/doc/info/stats.texi
+++ b/doc/info/stats.texi
@@ -32,8 +32,11 @@ For comments, bugs or suggestions, please contact the author at
 @var{'mario AT edu DOT xunta DOT es'}.
 
 @opencatbox{Categories:}
+@ctindex  Statistical inference  @subentry  Introduction to stats
 @category{Statistical inference}
+@ctindex  Share packages  @subentry  Introduction to stats
 @category{Share packages}
+@ctindex  Package stats  @subentry  Introduction to stats
 @category{Package stats}
 @closecatbox
 
@@ -98,6 +101,7 @@ not displayed; to access its value, make use of function @code{take_inference}.
 See also @mrefdot{take_inference}
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  inference_result
 @category{Package stats}
 @closecatbox
 
@@ -115,6 +119,7 @@ Returns @code{true} or @code{false}, depending on whether @var{obj} is an
 @code{inference_result} object or not.
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  inferencep
 @category{Package stats}
 @closecatbox
 
@@ -153,6 +158,7 @@ of all items, no matter they are displayed or not.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  items_inference
 @category{Package stats}
 @closecatbox
 
@@ -228,6 +234,7 @@ called in order to extract some information stored in it.
 See also @mrefcomma{inference_result} and @mrefdot{take_inference}
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  take_inference
 @category{Package stats}
 @closecatbox
 
@@ -254,7 +261,9 @@ return their results in floating point numbers. If it is @code{false},
 results are given in symbolic and rational format.
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  stats_numer
 @category{Package stats}
+@ctindex  Numerical evaluation  @subentry  stats_numer
 @category{Numerical evaluation}
 @closecatbox
 
@@ -403,6 +412,7 @@ this procedure should be applied to large samples.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  test_mean
 @category{Package stats}
 @closecatbox
 
@@ -574,6 +584,7 @@ equal.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  test_means_difference
 @category{Package stats}
 @closecatbox
 
@@ -672,6 +683,7 @@ is equal to or greater than 200.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  test_variance
 @category{Package stats}
 @closecatbox
 
@@ -787,6 +799,7 @@ against the alternative that the first is greater than the second.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  test_variance_ratio
 @category{Package stats}
 @closecatbox
 
@@ -923,6 +936,7 @@ A two sided asymptotic test. Confidence level is 99/100.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  test_proportion
 @category{Package stats}
 @closecatbox
 
@@ -1054,6 +1068,7 @@ distribution when the data are unknown.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  test_proportions_difference
 @category{Package stats}
 @closecatbox
 
@@ -1135,6 +1150,7 @@ against the alternative @math{H_1: median > 6}.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  test_sign
 @category{Package stats}
 @closecatbox
 
@@ -1258,6 +1274,7 @@ since there are ties.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  test_signed_rank
 @category{Package stats}
 @closecatbox
 
@@ -1373,6 +1390,7 @@ normal approximation. The alternative hypothesis is
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  test_rank_sum
 @category{Package stats}
 @closecatbox
 
@@ -1433,6 +1451,7 @@ Checks for the normality of a population, based on a sample of size 9.
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  test_normality
 @category{Package stats}
 @closecatbox
 
@@ -1577,7 +1596,9 @@ v_distribution, residuals, adc, aic, bic]
 @end example
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  linear_regression
 @category{Package stats}
+@ctindex  Statistical estimation  @subentry  linear_regression
 @category{Statistical estimation}
 @closecatbox
 
@@ -1601,6 +1622,7 @@ number and @var{n} a positive integer.
 See also @mrefdot{test_signed_rank}
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  pdf_signed_rank
 @category{Package stats}
 @closecatbox
 
@@ -1615,6 +1637,7 @@ number and @var{n} a positive integer.
 See also @mrefdot{test_signed_rank}
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  cdf_signed_rank
 @category{Package stats}
 @closecatbox
 
@@ -1629,6 +1652,7 @@ number and @var{n} and @var{m} are both positive integers.
 See also @mrefdot{test_rank_sum}
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  pdf_rank_sum
 @category{Package stats}
 @closecatbox
 
@@ -1643,6 +1667,7 @@ number and @var{n} and @var{m} are both positive integers.
 See also @mrefdot{test_rank_sum}
 
 @opencatbox{Categories:}
+@ctindex  Package stats  @subentry  cdf_rank_sum
 @category{Package stats}
 @closecatbox
 
